--- a/lecture6-CN.ipynb
+++ b/lecture6-CN.ipynb
@@ -13,7 +13,7 @@
    "id": "fd3ee4eb",
    "metadata": {},
    "source": [
-    "在先前的章节中，我们已经学习了一些基本的渐近理论。通过这些结论，我们可以研究OLS统计量 $\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'Y$ 的各种渐近性质。 这是本次课程的重点,在本章节我们将会涉及如下要点：（i） $\\widehat{\\beta}$ 是线性投影系数 $\\beta$ 的相合估计量；（ii）$\\widehat{\\beta}$ 的渐近正态性；（iii） 渐近正态性使我们可以渐近推断 $\\beta$ ；（iiii）在哪些条件下我们能够用可行的检验方法，相合估计检验统计量中的方差分量。"
+    "在先前的章节中，我们已经学习了一些基本的渐近理论。通过这些结论，我们可以研究OLS统计量 $\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'Y$ 的各种渐近性质。在本章节我们将会涉及如下要点：(i) $\\widehat{\\beta}$ 是线性投影系数 $\\beta$ 的相合估计量；(ii) $\\widehat{\\beta}$ 的渐近正态性；(iii) 渐近正态性使我们可以对 $\\beta$ 进行渐近推断。"
    ]
   },
   {
@@ -29,9 +29,9 @@
    "id": "93793f32",
    "metadata": {},
    "source": [
-    "在大样本估计中，**相合性**是最基本的要求。从直觉上说，在样本无限大时，一个理想的估计量应该无限趋近于总体的真实值（也就是概率收敛）。如果某个估计量，在无限大的样本中得到的结果仍然与真实值有偏差，那么除非有很可靠的证明推导，否则恐怕没有人想使用这样的估计量。\n",
+    "在大样本估计中，**相合性**是最基本的要求。从直觉上说，在样本无限大时，一个好的估计量应该无限趋近于总体的真实值(也就是概率收敛)。如果某个估计量在无限大的样本中得到的结果仍然与真实值有偏差，那么除非有很强的特殊理由，否则恐怕没有人想使用这样的估计量。\n",
     "\n",
-    "```{admonition} Definition 6.1 相合性\n",
+    "```{prf:definition} 相合性\n",
     "对于估计量 $\\widehat{\\theta}$ ，如果满足 $\\widehat{\\theta}\\stackrel{p}{\\to}\\theta$ ，则称 $\\widehat{\\theta}$ 为 $\\theta$ 的**相合估计**，其中 $\\theta$ 是某个非随机常数。\n",
     "```\n",
     "在OLS当中，如果 $n\\to\\infty$ 时 $\\widehat{\\beta}\\stackrel{p}{\\to}\\beta$ ，则称 $\\widehat{\\beta}$ 是**相合的**。其中的 $\\beta$ 是总体模型 $y_{i}=x_{i}'\\beta+e_{i}$ ( $E\\left[x_{i}e_{i}\\right]=0$ ) 的线性映射系数。为了验证**相合性**，我们写出公式：\n",
@@ -48,13 +48,13 @@
     "\n",
     "这里的 $\\widehat{Q}$ 是 $x_{i}x_{i}'$ 的样本均值, $Q$ 则是 $x_{i}x_{i}'$ 的总体均值。\n",
     "\n",
-    "同样根据LLN，我们可以得到第二项：\n",
+    "同样根据大数定律，我们可以得到第二项：\n",
     "\n",
     "$$\n",
     "\\frac{1}{n}\\sum_{i=1}^{n}x_{i}e_{i}\\stackrel{p}{\\to}0.\n",
     "$$\n",
     "\n",
-    "连续映射定理就能够推出：\n",
+    "根据连续映射定理，我们就能够推出：\n",
     "\n",
     "$$\n",
     "\\widehat{\\beta}-\\beta\\stackrel{p}{\\to}Q^{-1}\\times0=0.\n",
@@ -62,9 +62,8 @@
     "\n",
     "从而证明了 $\\widehat{\\beta}$ 是 $\\beta$ 的 相合估计量。\n",
     "\n",
-    "```{admonition} Remark 6.1\n",
-    "\n",
-    "无论 $\\left(y_{i},x_{i}\\right)_{i=1}^{n}$ 是否满足独立同分布，或者相依样本，或独立但不同分布（inid），\n",
+    "```{prf:remark} \n",
+    "无论 $\\left(y_{i},x_{i}\\right)_{i=1}^{n}$ 是否满足独立同分布，或者相依样本，或独立但不同分布(inid)，\n",
     "只要上述的两个表达式满足依概率收敛，同时 $Q$ 是可逆矩阵，$\\widehat{\\beta}$ 就依然满足相合性。\n",
     "```"
    ]
@@ -84,7 +83,7 @@
    "source": [
     "在有限样本中，$\\widehat{\\beta}$ 是随机变量。先前我们已经展示过正态性的 $\\widehat{\\beta}$ 的分布。没有了正态性假设的约束，我们将如何描述OLS估计量的随机性呢？\n",
     "\n",
-    "从前面的章节中我们已经了解到 $\\hat{\\beta}-\\beta\\stackrel{p}{\\to}0$ 会归于一个常数。为了研究它们的分布，我们需要用一个合适的乘数将其放大，使得它在极限中既不收敛也不发散。这个合适的比例因子是 $\\sqrt{n}$ ，\n",
+    "从前面的章节中我们已经了解到 $\\hat{\\beta}-\\beta\\stackrel{p}{\\to}0$ 会归于一个常数。为了研究它们的分布，我们需要用一个合适的乘数将其放大，使得它在极限情况下既不收敛也不发散。这个合适的比例因子是 $\\sqrt{n}$ ，\n",
     "类似于中心极限定理有: \n",
     "\n",
     "$$\n",
@@ -103,7 +102,7 @@
     "\n",
     "$$\n",
     "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}Q^{-1}\\times N\\left(0,\\Sigma\\right)\\sim N\\left(0,Q^{-1}\\Sigma Q^{-1}\\right)\n",
-    "$$(eq:asym\\_norm)\n",
+    "$$(eq:asym_norm)\n",
     "\n",
     "式子右边正态分布的方差被称为**渐进方差**，这里我们记其为$\\Omega$。在条件同方差的情况下，因为\n",
     "\n",
@@ -129,31 +128,31 @@
    "id": "d35c1759",
    "metadata": {},
    "source": [
-    "```{admonition} Remark 6.2\n",
-    "如果我们对 $k$ 阶参数 $\\beta_{k}$ 感兴趣，那么可以从{eq}`eq:asym\\_norm`中的联合分布推导出：\n",
+    "```{prf:remark} \n",
+    "如果我们对第 $k$ 个参数 $\\beta_{k}$ 感兴趣，那么可以从{eq}`eq:asym_norm`中的联合分布推导出：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "\\sqrt{n}\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right) & =\\sqrt{n}\\eta_{k}'\\left(\\widehat{\\beta}-\\beta\\right) \\\\\n",
     " & \\stackrel{d}{\\to}N\\left(0,\\sigma^{2}\\eta_{k}'Q^{-1}\\eta_{k}\\right)\\sim N\\left(0,\\sigma^{2}[Q^{-1}]_{kk}\\right),\n",
     "\\end{aligned}\n",
-    "$$(eq:asym\\_norm\\_homok\\_pivot)\n",
+    "$$(eq:asym_norm_homok_pivot)\n",
     "\n",
-    "其中特殊向量 $\\eta_{k}=\\left(0,\\ldots,0,1,0\\ldots,0\\right)'$ 用于挑选 $k$ 阶元素。\n",
+    "其中特殊向量 $\\eta_{k}=\\left(0,\\ldots,0,1,0\\ldots,0\\right)'$ 用于挑选第 $k$ 个元素。\n",
     "```\n",
-    "```{admonition} Remark 6.3\n",
-    "如果在{eq}`eq:asym\\_norm`的两边乘上 $\\Omega^{-1/2}$ ，我们就有：\n",
+    "```{prf:remark} \n",
+    "如果在{eq}`eq:asym_norm`的两边乘上 $\\Omega^{-1/2}$ ，我们就有：\n",
     "\n",
     "$$\n",
     "\\Omega^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}N\\left(0,I_{K}\\right).\n",
-    "$$(eq:asym\\_norm-pivot)\n",
+    "$$(eq:asym_norm_pivot)\n",
     "\n",
-    "因为{eq}`eq:asym\\_norm-pivot`中的渐近分布 $N\\left(0,I_{K}\\right)$ 不涉及任何的未知参数，我们称之为**枢轴量**(pivotal)。\n",
-    "相反，因为 $\\Omega$ 在 $N\\left(0,\\Omega\\right)$ 中是未知的，{eq}`eq:asym\\_norm`中的渐近分布不是枢轴量。如果我们想要了解 $\\beta_{k}$ 我们可以将{eq}`eq:asym\\_norm-pivot`以枢轴量的形式写为：\n",
+    "因为{eq}`eq:asym_norm_pivot`中的渐近分布 $N\\left(0,I_{K}\\right)$ 不涉及任何的未知参数，我们称之为**枢轴量**(pivotal)。\n",
+    "相反，因为 $\\Omega$ 在 $N\\left(0,\\Omega\\right)$ 中是未知的，{eq}`eq:asym_norm`中的渐近分布不是枢轴量。如果我们想要了解 $\\beta_{k}$ 我们可以将{eq}`eq:asym_norm_pivot`以枢轴量的形式写为：\n",
     "\n",
     "$$\n",
     "\\frac{\\sqrt{n}\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)}{\\sqrt{\\sigma^{2}[Q^{-1}]_{kk}}}\\stackrel{d}{\\to}N\\left(0,1\\right).\n",
-    "$$(eqn:label6)\n",
+    "$$(eq:label6)\n",
     "\n",
     "```"
    ]
@@ -171,8 +170,8 @@
    "id": "0a91043b",
    "metadata": {},
    "source": [
-    "到目前为止，我们已经得到了 $\\widehat{\\beta}$ 的渐近分布。然后，只有当 $\\Omega$ 已知时，{eq}`eq:asym\\_norm` 到 {eq}`eq:asym\\_norm-pivot` 才能派上用场。在现实情况中， $\\Omega$ 通常是未知的，因此需要对其进行估计，才能进行统计推断。\n",
-    "假设 $\\tilde{\\Omega}$ 是符合 $\\tilde{\\Omega}\\stackrel{p}{\\to}\\Omega$ 的 $\\Omega$ 相合估计量，我们用$\\tilde{\\Omega}$ 替代{eq}`eq:asym\\_norm-pivot`中的 $\\Omega$ ，\n",
+    "到目前为止，我们已经得到了 $\\widehat{\\beta}$ 的渐近分布。然后，只有当 $\\Omega$ 已知时，{eq}`eq:asym_norm` 到 {eq}`eq:asym_norm_pivot` 才能派上用场。在现实情况中， $\\Omega$ 通常是未知的，因此需要对其进行估计，才能进行统计推断。\n",
+    "假设 $\\tilde{\\Omega}$ 是符合 $\\tilde{\\Omega}\\stackrel{p}{\\to}\\Omega$ 的 $\\Omega$ 相合估计量，我们用$\\tilde{\\Omega}$ 替代{eq}`eq:asym_norm_pivot`中的 $\\Omega$ ，\n",
     "得到可行(feasible)统计量 $\\tilde{\\Omega}^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right) $ 。\n",
     "**可行统计量**不带有任何未知参数，可以直接用数据进行计算。该统计量可以被分解为：\n",
     "\n",
@@ -182,11 +181,11 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "因为 $\\Omega$ 是正定的，根据连续映射定理我们就会得到第一个因子 $\\tilde{\\Omega}^{-1/2}\\Omega^{1/2}\\stackrel{p}{\\to}I_{K}$ 。依据{eq}`eq:asym\\_norm-pivot` ，第二个因子有渐近正态性，于是通过**Slutsky定理**推出\n",
+    "因为 $\\Omega$ 是正定的，根据连续映射定理我们就会得到第一个因子 $\\tilde{\\Omega}^{-1/2}\\Omega^{1/2}\\stackrel{p}{\\to}I_{K}$ 。依据{eq}`eq:asym_norm_pivot` ，第二个因子有渐近正态性，于是通过**Slutsky定理**推出\n",
     "\n",
     "$$\n",
     "\\tilde{\\Omega}^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}N\\left(0,I_{K}\\right)\n",
-    "$$(eq:asym\\_norm\\_feasible)\n"
+    "$$(eq:asym_norm_feasible)\n"
    ]
   },
   {
@@ -194,8 +193,8 @@
    "id": "ca2550fd",
    "metadata": {},
    "source": [
-    "接下来的问题是如何相合估计 $\\Omega=Q^{-1}\\Sigma Q^{-1}$ ，或者等同于怎么获得合适的 $\\tilde{\\Omega}$ 。\n",
-    "我们之前已经得出 $\\widehat{Q}\\stackrel{p}{\\to}Q$ ，如果也有 $\\Sigma$ 的相合估计量 $\\tilde{\\Sigma}$ ，那么可以将他们带入形成 $\\tilde{\\Omega}=\\widehat{Q}^{-1}\\tilde{\\Sigma}\\widehat{Q}^{-1}$ 。棘手的问题在于如何相合估计$\\Sigma=E\\left[x_{i}x_{i}'e_{i}^{2}\\right]$ 。因为 $e_{i}$ 无法观测，我们不能用样本均值 $x_{i}x_{i}'e_{i}^{2}$ 来进行估计。基于同方差假设：$\\Omega=Q^{-1}\\Sigma Q^{-1}=\\sigma^{2}Q^{-1}$，我们同样不能用 $e_{i}^{2}$ 来估计 $\\sigma^{2}$ 。"
+    "接下来的问题是如何相合地估计 $\\Omega=Q^{-1}\\Sigma Q^{-1}$，或者说，怎么获得合适的 $\\tilde{\\Omega}$ 。\n",
+    "我们之前已经得出 $\\widehat{Q}\\stackrel{p}{\\to}Q$，如果我们也有 $\\Sigma$ 的相合估计量 $\\tilde{\\Sigma}$，那么可以将它们代入，得到 $\\tilde{\\Omega}=\\widehat{Q}^{-1}\\tilde{\\Sigma}\\widehat{Q}^{-1}$。棘手的问题在于如何相合估计$\\Sigma=E\\left[x_{i}x_{i}'e_{i}^{2}\\right]$。因为 $e_{i}$ 无法观测，我们不能用样本均值 $x_{i}x_{i}'e_{i}^{2}$ 来进行估计。基于同方差假设：$\\Omega=Q^{-1}\\Sigma Q^{-1}=\\sigma^{2}Q^{-1}$，我们同样不能用 $e_{i}^{2}$ 来估计 $\\sigma^{2}$。"
    ]
   },
   {
@@ -203,16 +202,15 @@
    "id": "0acecdde",
    "metadata": {},
    "source": [
-    "```{admonition} Remark 6.4\n",
+    "```{prf:remark} \n",
     "如果选用 $\\widehat{e}_{i}=\\widehat{y}_{i}-x_{i}'\\widehat{\\beta}$ 并用其代替 $e_{i}$，那么我们就可以得到同方差的估计量 $\\widehat{\\Omega}=\\widehat{\\sigma}^{2}\\widehat{Q}^{-1}$ \\\n",
     "其中 $\\widehat{\\sigma}^{2}=\\widehat{e}'\\widehat{e}/\\left(n-K\\right)$ 或 \n",
     "$\\widehat{\\sigma}^{2}=\\widehat{e}'\\widehat{e}/n$ \n",
     "\n",
-    "如果是异方差，得到的估计量为：$\\widehat{\\Omega}=\\widehat{Q}^{-1}\\widehat{\\Sigma}\\widehat{Q}^{-1}$ 相应地，其中$\\widehat{\\Sigma}=n^{-1}\\sum_{i}x_{i}x_{i}'\\widehat{e}_{i}^{2}$。\n",
-    "本讲略去\n",
-    "$\\widehat{\\sigma}^{2}\\stackrel{p}{\\to}\\sigma^{2}$ 和 $\\widehat{\\Sigma}\\stackrel{p}{\\to}\\Sigma$ 的推导。\n",
+    "如果是异方差，得到的估计量为：$\\widehat{\\Omega}=\\widehat{Q}^{-1}\\widehat{\\Sigma}\\widehat{Q}^{-1}$。相应地，其中$\\widehat{\\Sigma}=n^{-1}\\sum_{i}x_{i}x_{i}'\\widehat{e}_{i}^{2}$。\n",
+    "本讲略去 $\\widehat{\\sigma}^{2}\\stackrel{p}{\\to}\\sigma^{2}$ 和 $\\widehat{\\Sigma}\\stackrel{p}{\\to}\\Sigma$ 的推导。\n",
     "\n",
-    "如果我们选用 $\\widehat{\\sigma}^{2}=\\widehat{e}'\\widehat{e}/\\left(n-K\\right)$ 然后替换{eq}`eq:asym\\_norm\\_homok\\_pivot`中的 $\\sigma^{2}$ ，那么 $T_{k}=\\frac{\\sqrt{n}\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)}{\\sqrt{\\widehat{\\sigma}^{2}[\\widehat{Q}^{-1}]_{kk}}}$ 的结果就等于有限样本估计中的 $t$ 统计量。\n",
+    "如果我们选用 $\\widehat{\\sigma}^{2}=\\widehat{e}'\\widehat{e}/\\left(n-K\\right)$ 然后替换{eq}`eq:asym_norm_homok_pivot`中的 $\\sigma^{2}$ ，那么 $T_{k}=\\frac{\\sqrt{n}\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)}{\\sqrt{\\widehat{\\sigma}^{2}[\\widehat{Q}^{-1}]_{kk}}}$ 的结果就等于有限样本估计中的 $t$ 统计量。\n",
     "```"
    ]
   },
@@ -221,8 +219,8 @@
    "id": "37fd15dd",
    "metadata": {},
    "source": [
-    "之前我们学过，在经典正态误差的假设中， $t$ 统计量遵循精确有限样本 $t$ 分布，自由度为 $n-K$ 。在渐近分析中，如果$E\\left[e_{i}^{2}|x_{i}\\right]<\\infty$ ，我们允许 $e_{i}$ 服从任何的分布。渐近正态性允许我们进行渐近统计推断。对于 $t$ 统计量，我们必须从正态分布中获得临界值，\n",
-    "因为如果 $\\widehat{\\sigma}^{2}\\stackrel{p}{\\to}\\sigma^{2}$ ，根据 Slutsky's Theorem 有：\n",
+    "之前我们学过，在经典正态误差的假设中， $t$ 统计量遵循精确有限样本 $t$ 分布，其自由度为 $n-K$ 。在渐近分析中，如果$E\\left[e_{i}^{2}|x_{i}\\right]<\\infty$ ，我们允许 $e_{i}$ 服从任何的分布。渐近正态性允许我们进行渐近统计推断。对于 $t$ 统计量，我们必须从正态分布中获得临界值，\n",
+    "因为如果 $\\widehat{\\sigma}^{2}\\stackrel{p}{\\to}\\sigma^{2}$ ，根据**Slutsky定理**有：\n",
     "\n",
     "$$\n",
     "T_{k}=\\frac{\\sqrt{\\sigma^{2}[Q^{-1}]_{kk}}}{\\sqrt{\\widehat{\\sigma}^{2}[\\widehat{Q}^{-1}]_{kk}}}\\cdot\\frac{\\sqrt{n}\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)}{\\sqrt{\\sigma^{2}[Q^{-1}]_{kk}}}\\stackrel{d}{\\to}1\\times N\\left(0,1\\right)\\sim N\\left(0,1\\right).\n",
@@ -242,17 +240,17 @@
    "id": "3588ad13",
    "metadata": {},
    "source": [
-    "不等式是渐近理论中最重要的工具之一。有些推导过程初看起来很复杂，但实际上会经常在各种结论的证明中频繁碰见。多被“折磨”几年，对你来说这种计算就是小菜一碟了。\n",
+    "不等式是渐近理论中最重要的工具之一。有些推导过程初看起来很复杂，但实际上会经常在各种结论的证明中频繁碰见。被“折磨”几年之后，这种计算就是家常便饭了。\n",
     "\n",
     "```{admonition} 历史趣闻\n",
-    "{cite}white1980heteroskedasticity \n",
+    "{cite}`white1980heteroskedasticity`\n",
     "引起了人们对经济场景中违反经典假设的线性回归的注意。\n",
     "计量经济学家们开始关注统计推断中的方差估计。\n",
     "在接下来的几十年里，涌现出大量方差估计理论，用于处理各种各样偏离经典假设的情形。\n",
     "```\n",
     "\n",
     "```{admonition} 拓展阅读 \n",
-    "在本章中，所有的向量的维度都是有限的，如果 $K\\to\\infty$ 的速率比 $n$ 小得多，其中的结论可以被推广到 $K$ 无限的情况。这样的渐近将需要多个指数，并且它超出了我们在这里学到的最简单的 $n\\to\\infty$ 的情况。大数据伴随着复杂的模型，模型往往随着 $n$ 的增加而变得更加复杂。\n",
+    "在本章中，所有的向量的维度都是有限的，如果 $K\\to\\infty$ 的速率比 $n$ 小得多，其中的结论可以被推广到 $K$ 无限的情况。这样的渐近将需要多个维度，它超出了我们在这里学到的最简单的 $n\\to\\infty$ 的范畴。大数据伴随着复杂的模型，模型往往随着 $n$ 的增加而变得更加复杂。\n",
     "```"
    ]
   },
