--- a/lecture10-CN.ipynb
+++ b/lecture10-CN.ipynb
@@ -9,6 +9,7 @@
     "在微观经济分析中， 外生变量指的是那些不由被考虑的经济体系所决定的因素，\n",
     "而内生变量则是在经济体系内被决定的因素。\n",
     "\n",
+    "```{prf:example}\n",
     "如下是我们碰到过多次的一个微观经济习题。如果一个人的效用函数是\n",
     "$u\\left(q_{1},q_{2}\\right)$，其中\n",
     "$q_{1}$ 和 $q_{2}$ 是两件商品的数量。 他的预算是\n",
@@ -17,7 +18,8 @@
     "$q_{1}^{*}$ 和 $q_{2}^{*}$ 是多少呢？在这个问题中，效用函数\n",
     "$u\\left(\\cdot,\\cdot\\right)$，物品价格 $p_{1}$ 和\n",
     "$p_{2}$，和预算 $C$ 是外生变量。 而最优数量\n",
-    "$q_{1}^{*}$ 和 $q_{2}^{*}$ 是内生变量。\n"
+    "$q_{1}^{*}$ 和 $q_{2}^{*}$ 是内生变量。\n",
+    "```"
    ]
   },
   {
@@ -30,7 +32,7 @@
     "\n",
     "$$\n",
     "y_{i}=x_{i}'\\beta+e_{i}\n",
-    "$$ \n",
+    "$$ (eqn:label101)\n",
     "\n",
     "只是方程系统中的一部分。\n",
     "为了简单起见， 如果在单方程模型中，$\\mathrm{cov}\\left(x_{ik},e_{i}\\right)\\neq0$，\n",
@@ -46,12 +48,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "识别\n",
-    "--------------\n",
+    "## 识别\n",
+    "\n",
     "\n",
     "内生性通常意味着难以仅用 $\\left(y_{i},x_{i}\\right)$ 识别我们感兴趣的参数。内生性的鉴别\n",
     "对于理解实证经济研究是至关重要的. 如果模型中的参数与被观测变量的分布之间的映射是一一对应的，\n",
-    "那我们就认为这个参数是被*识别*的。反之我们就称这个参数为*识别不足*。 这是一个抽象的定义，\n",
+    "那我们就认为这个参数是被**识别**的。反之我们就称这个参数为**识别不足**。 这是一个抽象的定义，\n",
     "让我们接下来在线性回归的背景下来讨论它。\n",
     "\n",
     "线性投影模型隐含了矩方程：\n",
@@ -72,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "```{prf:example}\n",
     "假设 $x_{i}$ 是一个随机的标量， \n",
     "\n",
     "$$\n",
@@ -86,8 +88,7 @@
     "$$ \n",
     "\n",
     "服从联合正态分布，并且因变量 $y_{i}$ 来源于\n",
-    "([\\[eq:generative\\]](#eq:generative){reference-type=\"ref\"\n",
-    "reference=\"eq:generative\"})。 对联合正态分布的假设意味着条件均值\n",
+    "{eq}`eqn:label101`。 对联合正态分布的假设意味着条件均值\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[y_{i}|x_{i}\\right]=\\beta x_{i}+\\mathbb{E}\\left[e_{i}|x_{i}\\right]=\\left(\\beta+\\sigma_{xe}\\right)x_{i}\n",
@@ -98,14 +99,15 @@
     "由于无法观测到的 $e_{i}$，我们从数据中不能得出 $\\sigma_{xe}$，因此无法重新获得\n",
     "$\\beta$。 这正是我们在本课程前面提到过的 **遗漏变量偏差** 。差距在于可用数据\n",
     "$\\left(y_{i},x_{i}\\right)$ 和模型识别之间。在特殊情况下，我们假设\n",
-    "$\\sigma_{xe}=0$，此时内生性消失，$\\beta$ 可以被识别。\n"
+    "$\\sigma_{xe}=0$，此时内生性消失，$\\beta$ 可以被识别。\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "```{prf:remark}\n",
     "到目前为止，线性投影模型是本课程中证明OLS合理性的最通用模型。\n",
     "OLS对于线性投影系数来说是一致的。根据线性投影模型的定义，\n",
     "$\\mathbb{E}\\left[x_{i}e_{i}\\right]=0$，因此在线性投影模型中，没有内生性的空间，\n",
@@ -115,7 +117,8 @@
     "在计量经济学中，我们经常对具有经济解释的模型感兴趣。实证研究中的普遍做法是假设\n",
     "观察到的数据是从一个简约模型中生成的，然后下一步是去估计模型中的未知参数。 由于\n",
     "我们通常可以发现一些未包含在回归变量中的参数，但他们又与包含的回归变量相关，同时\n",
-    "又影响 $y_{i}$，因此内生性成为一个重要问题。\n"
+    "又影响 $y_{i}$，因此内生性成为一个重要问题。\n",
+    "```"
    ]
   },
   {
@@ -154,18 +157,17 @@
    "metadata": {},
    "source": [
     "\n",
-    "工具变量\n",
-    "-----------\n",
+    "## 工具变量\n",
     "\n",
-    "有效的 IV 有两个要求：正交性和相关性。正交性需要正确指定模型。如果\n",
-    "违反了相关性，即 IV 与内生变量不相关，则多个参数可以生成可观察数据。\n",
+    "\n",
+    "有效的 IV 有两个要求：正交性和相关性。正交性需要正确指定模型。如果违反了相关性，即 IV 与内生变量不相关，则多个参数可以生成可观察数据。\n",
     "识别，按照计量经济学中的标准定义，在这种情况下被打破了。\n",
     "\n",
     "结构方程是一种我们关心的经济模型。让我们来看看以下这个线性结构模型：\n",
     "\n",
     "$$\n",
     "y_{i}=x_{1i}'\\beta_{1}+z_{1i}'\\beta_{2}+\\epsilon_{i},\n",
-    "$$\n",
+    "$$(eqn:label102)\n",
     "\n",
     "\n",
     "其中 $x_{1i}$ 是一个 $k_{1}$维的内生解释变量，$z_{1i}$ 是一个 $k_{2}$维\n",
@@ -176,33 +178,31 @@
     "\n",
     "我们称这个外生变量为 **工具变量** (instrumental variable, or IV for short)。令 $\\beta=\\left(\\beta_{1}',\\beta_{2}'\\right)'$ \n",
     "为一个我们感兴趣的 $K$维的参数。从现在开始，我们将\n",
-    "([\\[eq:basic\\_1\\]](#eq:basic_1){reference-type=\"ref\"\n",
-    "reference=\"eq:basic_1\"}) 重写为\n",
+    "{eq}`eqn:label102`重写为\n",
     "\n",
     "$$\n",
     "y_{i}=x_{i}'\\beta+\\epsilon_{i}\n",
-    "$$\n",
+    "$$(eqn:basic)\n",
     "\n",
     "我们就有了一个工具向量 $z_{i}$。\n",
     "\n",
     "在估计任何结构计量经济模型之前，我们必须检查是否能识别。在\n",
-    "([\\[eq:basic\\_2\\]](#eq:basic_2){reference-type=\"ref\"\n",
-    "reference=\"eq:basic_2\"})的背景下， 识别需要真值 $\\beta_{0}$ 是参数空间上满足矩条件\n",
+    "{eq}`eqn:basic`的背景下， 识别需要真值 $\\beta_{0}$ 是参数空间上满足矩条件\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}'\\beta\\right)\\right]=0_{L}.\n",
-    "$$\n",
+    "$$(eqn:moment)\n",
     "\n",
     "的唯一值。秩条件是识别的充分必要条件。\n",
-    "\n",
+    "```{prf:assumption} 矩条件\n",
     "$\\mathrm{rank}\\left(\\mathbb{E}\\left[z_{i}x_{i}'\\right]\\right)=K$.\n",
     "\n",
     "注意 $\\mathbb{E}\\left[x_{i}'z_{i}\\right]$ 是一个 $K\\times L$ 的矩阵。\n",
-    "秩条件意味着 *顺序条件* $L\\geq K$， 即不被包含的工具的数量必须不少于内生变量的数量。\n",
-    "\n",
-    "([\\[eq:moment\\]](#eq:moment){reference-type=\"ref\"\n",
-    "reference=\"eq:moment\"})中的参数当且仅当秩条件成立时才被识别。\n",
-    "\n",
+    "秩条件意味着 **顺序条件** $L\\geq K$， 即不被包含的工具的数量必须不少于内生变量的数量。\n",
+    "```\n",
+    "```{prf:assumption}\n",
+    "{eq}`eqn:moment`中的参数当且仅当秩条件成立时才被识别。\n",
+    "```{prf:proof}\n",
     "（“正”方向的证明。） 对于任何使得 $\\tilde{\\beta}\\neq\\beta_{0}$ 的 $\\tilde{\\beta}$，\n",
     "\n",
     "$$\n",
@@ -216,11 +216,11 @@
     "$\\mathbb{E}\\left[z_{i}x_{i}'\\right]\\left(\\beta_{0}-\\tilde{\\beta}\\right)=0_{L}$\n",
     "当且仅当 $\\beta_{0}-\\tilde{\\beta}=0_{K}$，而这违反了\n",
     "$\\tilde{\\beta}\\neq\\beta_{0}$。因此 $\\beta_{0}$ 是唯一满足\n",
-    "([\\[eq:moment\\]](#eq:moment){reference-type=\"ref\"\n",
-    "reference=\"eq:moment\"})的值。\n",
+    "{eq}`eqn:moment`的值。\n",
     "\n",
     "（“反”方向的证明留作练习。 提示：通过对立性，如果秩条件不成立，则模型无法被识别。\n",
-    "我们可以通过举例子轻松地证明这个定理。）\n"
+    "我们可以通过举例子轻松地证明这个定理。）\n",
+    "```"
    ]
   },
   {
@@ -228,33 +228,31 @@
    "metadata": {},
    "source": [
     "\n",
-    "内生性的来源\n",
-    "----------------------\n",
+    "## 内生性的来源\n",
+    "\n",
     "\n",
     "由于计量经济学家主要使用非实验数据，我们内生性问题非常重要性。下面我们来看几个例子。\n",
-    "\n",
+    "```{prf:example}\n",
     "我们知道一阶差分 (FD) 估计值对于（静态）面板数据模型来说是一致的。但FD估计值\n",
     "在动态面板模型中将会遇到困难：\n",
     "\n",
     "$$\n",
     "y_{it}=\\beta_{1}+\\beta_{2}y_{i,t-1}+\\beta_{3}x_{it}+\\alpha_{i}+\\epsilon_{it},\\label{eq:dymPanel}\n",
-    "$$\n",
+    "$$(eqn:panel)\n",
     "\n",
     "即使我们假设\n",
     "\n",
     "$$\n",
-    "\\mathbb{E}\\left[\\epsilon_{is}|\\alpha_{i},x_{i1},\\ldots,x_{iT},y_{i,t-1},y_{i,t-2},\\ldots,y_{i0}\\right]=0,\\ \\ \\forall s\\geq t\\label{eq:dyn_mean_0}\n",
-    "$$\n",
+    "\\mathbb{E}\\left[\\epsilon_{is}|\\alpha_{i},x_{i1},\\ldots,x_{iT},y_{i,t-1},y_{i,t-2},\\ldots,y_{i0}\\right]=0,\\ \\ \\forall s\\geq t\n",
+    "$$(eqn:labeldyn)\n",
     "\n",
-    "当对周期 $t$ 和 $t-1$ 取上述方程 ([\\[eq:dymPanel\\]](#eq:dymPanel){reference-type=\"ref\"\n",
-    "reference=\"eq:dymPanel\"}) 的差时，我们得到:\n",
+    "当对周期 $t$ 和 $t-1$ 取上述方程{eq}`eqn:panel`的差时，我们得到:\n",
     "\n",
     "$$\n",
-    "\\left(y_{it}-y_{i,t-1}\\right)=\\beta_{2}\\left(y_{it-1}-y_{i,t-2}\\right)+\\beta_{3}\\left(x_{it}-x_{i,t-1}\\right)+\\left(\\epsilon_{it}-\\epsilon_{i,t-1}\\right).\\label{eq:dyn_mean_1}\n",
-    "$$\n",
+    "\\left(y_{it}-y_{i,t-1}\\right)=\\beta_{2}\\left(y_{it-1}-y_{i,t-2}\\right)+\\beta_{3}\\left(x_{it}-x_{i,t-1}\\right)+\\left(\\epsilon_{it}-\\epsilon_{i,t-1}\\right).\n",
+    "$$(eqn:dynmean)\n",
     "\n",
-    "根据 ([\\[eq:dyn\\_mean\\_0\\]](#eq:dyn_mean_0){reference-type=\"ref\"\n",
-    "reference=\"eq:dyn_mean_0\"})，\n",
+    "根据{eq}`eqn:labeldyn`，\n",
     "$\\mathbb{E}\\left[\\left(x_{it}-x_{i,t-1}\\right)\\left(\\epsilon_{it}-\\epsilon_{i,t-1}\\right)\\right]=0$，\n",
     "但是\n",
     "\n",
@@ -263,12 +261,12 @@
     "$$\n",
     "\n",
     "因此系数 $\\beta_{2}$ 和 $\\beta_{3}$ 不能从线性回归模型\n",
-    "([\\[eq:dyn\\_mean\\_1\\]](#eq:dyn_mean_1){reference-type=\"ref\"\n",
-    "reference=\"eq:dyn_mean_1\"}) 中被识别。\n",
+    "{eq}`eqn:dynmean`中被识别。\n",
+    "```\n",
     "\n",
+    "```{prf:remark}\n",
     "在上述例子中工具变量很容易找到。请注意里面的线性关系\n",
-    "([\\[eq:dymPanel\\]](#eq:dymPanel){reference-type=\"ref\"\n",
-    "reference=\"eq:dymPanel\"}) 意味着 \n",
+    "{eq}`eqn:labeldyn` 意味着 \n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -279,16 +277,17 @@
     "$$\n",
     "\n",
     "根据假设\n",
-    "([\\[eq:dyn\\_mean\\_0\\]](#eq:dyn_mean_0){reference-type=\"ref\"\n",
-    "reference=\"eq:dyn_mean_0\"}). 上述关系以\n",
+    "{eq}`eqn:labeldyn`， 上述关系以\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[\\left(\\epsilon_{i,t}-\\epsilon_{i,t-1}\\right)f\\left(\\epsilon_{i,t-2},\\epsilon_{i,t-3},\\ldots,\\epsilon_{i1}\\right)\\right]=0.\n",
     "$$\n",
+    "\n",
     "的形式给出正交条件。\n",
     "换句话说，任何关于 $y_{i,t-2},y_{i,t-3},\\ldots,y_{i1}$ 的函数都垂直于误差项\n",
-    "$\\left(\\epsilon{}_{i,t-1}-\\epsilon_{i,t-2}\\right)$. \n",
-    "这里被排除在外的IV（工具变量）是由模型本身自然生成的。\n"
+    "$\\left(\\epsilon{}_{i,t-1}-\\epsilon_{i,t-2}\\right)$。\n",
+    "这里被排除在外的IV（工具变量）是由模型本身自然生成的。\n",
+    "```"
    ]
   },
   {
@@ -297,50 +296,45 @@
    "source": [
     "\n",
     "另一个经典的内生性来源是测量误差。\n",
-    "\n",
+    "```{prf:example}\n",
     "当解释变量不是直接可观察的，而是被有误差的测量代替时，内生性的问题也会出现。假设真正的线性模型是:\n",
     "\n",
     "$$\n",
-    "y_{i}=\\beta_{1}+\\beta_{2}x_{i}^{*}+u_{i},\\label{eq:measurement_error}\n",
-    "$$\n",
+    "y_{i}=\\beta_{1}+\\beta_{2}x_{i}^{*}+u_{i}\n",
+    "$$(eqn:merror)\n",
     "\n",
     "其中 $\\mathbb{E}\\left[u_{i}|x_{i}^{*}\\right]=0$ 。 我们观察不到\n",
     "$x_{i}^{*}$ ，但我们能观察到 $x_{i}$，它是 $x_{i}^{*}$ 的测量值，\n",
     "并且它们的关系是 $$x_{i}=x_{i}^{*}+v_{i}$$，其中\n",
     "$\\mathbb{E}\\left[v_{i}|x_{i}^{*},u_{i}\\right]=0$。这种测量误差的公式被称为**经典测量误差** 。\n",
-    "替换([\\[eq:measurement\\_error\\]](#eq:measurement_error){reference-type=\"ref\"\n",
-    "reference=\"eq:measurement_error\"}),\n",
+    "替换{eq}`eqn:merror`，\n",
     "\n",
     "$$\n",
     "y_{i}=\\beta_{1}+\\beta_{2}\\left(x_{i}-v_{i}\\right)+u_{i}=\\beta_{1}+\\beta_{2}x_{i}+e_{i}\\label{eq:measurement_error2}\n",
     "$$\n",
     "\n",
-    "中的不可观察的 $x_{i}^{*}$，\n",
-    "其中 $e_{i}=u_{i}-\\beta_{2}v_{i}$。\\\n",
+    "中的不可观察的 $x_{i}^{*}$，其中 $e_{i}=u_{i}-\\beta_{2}v_{i}$。\\\n",
     "相关性:\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[x_{i}e_{i}\\right]=\\mathbb{E}\\left[\\left(x_{i}^{*}+v_{i}\\right)\\left(u_{i}-\\beta_{2}v_{i}\\right)\\right]=-\\beta_{2}\\mathbb{E}\\left[v_{i}^{2}\\right]\\neq0.\n",
-    "$$\n",
+    "$$(eqn:merror2)\n",
     "\n",
-    "OLS\n",
-    "([\\[eq:measurement\\_error2\\]](#eq:measurement_error2){reference-type=\"ref\"\n",
-    "reference=\"eq:measurement_error2\"}) 不能提供一个一致的估计量。\n",
-    "\n",
+    "OLS{eq}`eqn:merror2` 不能提供一个一致的估计量。\n",
+    "```\n",
+    "```{prf:remark}\n",
     "或者，我们可以从线性投影系数的表达式来看上述经典测量误差问题。我们知道在\n",
-    "([\\[eq:measurement\\_error\\]](#eq:measurement_error){reference-type=\"ref\"\n",
-    "reference=\"eq:measurement_error\"})\n",
-    "$\\beta_{2}^{\\mathrm{infeasible}}=\\mathrm{cov}\\left[x_{i}^{*},y_{i}\\right]/\\mathrm{var}\\left[x_{i}^{*}\\right].$\n",
+    "{eq}`eqn:merror`中 $\\beta_{2}^{\\mathrm{infeasible}}=\\mathrm{cov}\\left[x_{i}^{*},y_{i}\\right]/\\mathrm{var}\\left[x_{i}^{*}\\right].$\n",
     "相反，当我们对可观察的 $x_{i}$ 回归 $y_{i}$ 时，对应的线性投影系数为:\n",
     "\n",
     "$$\n",
     "\\beta_{2}^{\\mathrm{feasible}}=\\frac{\\mathrm{cov}\\left[x_{i},y_{i}\\right]}{\\mathrm{var}\\left[x_{i}\\right]}=\\frac{\\mathrm{cov}\\left[x_{i}^{*}+v_{i},y_{i}\\right]}{\\mathrm{var}\\left[x_{i}^{*}+v_{i}\\right]}=\\frac{\\mathrm{cov}\\left[x_{i}^{*},y_{i}\\right]}{\\mathrm{var}\\left[x_{i}^{*}\\right]+\\mathrm{var}\\left[v_{i}\\right]}.\n",
     "$$\n",
     "\n",
-    "很明显，\n",
-    "$|\\beta_{2}^{\\mathrm{feasible}}|\\leq|\\beta_{2}^{\\mathrm{infeasible}}|$\n",
+    "很明显， $|\\beta_{2}^{\\mathrm{feasible}}|\\leq|\\beta_{2}^{\\mathrm{infeasible}}|$\n",
     "对应的线性投影系数为 $\\mathrm{var}\\left[v_{i}\\right]=0$ （无测量误差）\n",
-    "时成立。这称为由于测量误差引起的 **衰减偏差** 。\n"
+    "时成立。这称为由于测量误差引起的 **衰减偏差** 。\n",
+    "```"
    ]
   },
   {
@@ -349,22 +343,21 @@
    "source": [
     "\n",
     "接下来，我们给出两个方程组的例子，一个来自微观经济学，另一个来自宏观经济学。\n",
-    "\n",
+    "```{prf:example} 供给与需求\n",
     "设 $p_{i}$ 和 $q_{i}$ 为第 $i$ 个市场上一个商品的对数价格和对数数量，并且它们在市场上是独立同分布的。\n",
     "我们对下面的这个需求曲线感兴趣\n",
     "\n",
     "$$\n",
-    "p_{i}=\\alpha_{d}-\\beta_{d}q_{i}+e_{di}\\label{eq:demand}\n",
-    "$$\n",
+    "p_{i}=\\alpha_{d}-\\beta_{d}q_{i}+e_{di}\n",
+    "$$(eq:demand)\n",
     "\n",
     "其中 $\\beta_{d}\\geq0$ ； 以及以下这个供给曲线\n",
     "\n",
     "$$\n",
-    "p_{i}=\\alpha_{s}+\\beta_{s}q_{i}+e_{si}\\label{eq:supply}\n",
-    "$$\n",
+    "p_{i}=\\alpha_{s}+\\beta_{s}q_{i}+e_{si\n",
+    "$$(eq:supply)\n",
     "\n",
-    "其中\n",
-    "$\\beta_{s}\\geq0$。 我们使用一个简单的线性规范，以便系数 $\\beta_{d}$\n",
+    "其中 $\\beta_{s}\\geq0$。 我们使用一个简单的线性规范，以便系数 $\\beta_{d}$\n",
     "可以被解释为需求弹性，而 $\\beta_{s}$ 可以被解释为供给弹性。 \n",
     "本科微观经济学课程教授确定性形式，但我们添加了一个误差项来处理数据。\n",
     "我们可以通过对 $q_{i}$ 回归 $p_{i}$ 来得到弹性吗？\n",
@@ -380,14 +373,13 @@
     "\\alpha_{s}\n",
     "\\end{pmatrix}+\\begin{pmatrix}e_{di}\\\\\n",
     "e_{si}\n",
-    "\\end{pmatrix}.\\label{eq:structural}\n",
-    "$$\n",
+    "\\end{pmatrix}\n",
+    "$$(eq:structural)\n",
     "\n",
     "微观经济学术语称\n",
     "$\\left(p_{i},q_{i}\\right)$ 为内生变量，称\n",
     "$\\left(e_{di},e_{si}\\right)$ 为外生变量。\n",
-    "([\\[eq:structural\\]](#eq:structural){reference-type=\"ref\"\n",
-    "reference=\"eq:structural\"}) 是一个*结构方程*，因为它是由经济理论驱动的，\n",
+    "{eq}`eq:structural` 是一个**结构方程**，因为它是由经济理论驱动的，\n",
     "因此系数具有经济意义。如果我们排除明显的情况 $\\beta_{d}=\\beta_{s}=0$，\n",
     "我们可以解出 \n",
     "\n",
@@ -409,11 +401,9 @@
     "\\end{pmatrix}+\\begin{pmatrix}e_{di}\\\\\n",
     "e_{si}\n",
     "\\end{pmatrix}\\right].\\label{eq:reduced}\\end{aligned}\n",
-    "$$\n",
+    "$$(eq:reduced)\n",
     "\n",
-    "这个方程\n",
-    "([\\[eq:reduced\\]](#eq:reduced){reference-type=\"ref\"\n",
-    "reference=\"eq:reduced\"}) 被称为 **简化形式** ——内生变量被表示为关于参数和外生变量的显式函数。\n",
+    "这个方程{eq}`eq:reduced` 被称为 **简化形式** ——内生变量被表示为关于参数和外生变量的显式函数。\n",
     "特别地，\n",
     "\n",
     "$$\n",
@@ -421,11 +411,8 @@
     "$$\n",
     "\n",
     "因此对数价格与 $e_{si}$ 和 $e_{di}$ 都相关。由于 $q_{i}$ 在\n",
-    "([\\[eq:demand\\]](#eq:demand){reference-type=\"ref\"\n",
-    "reference=\"eq:demand\"}) 或 ([\\[eq:supply\\]](#eq:supply){reference-type=\"ref\"\n",
-    "reference=\"eq:supply\"}) 中是内生的（在计量经济学意义上），因此需求弹性和供给弹性都不能与\n",
-    "$\\left(p_{i},q_{i}\\right)$ 相同。确实，由于在([\\[eq:reduced\\]](#eq:reduced){reference-type=\"ref\"\n",
-    "reference=\"eq:reduced\"})中，\n",
+    "{eq}`eq:demand`或{eq}`eq:supply`中是内生的（在计量经济学意义上），因此需求弹性和供给弹性都不能与\n",
+    "$\\left(p_{i},q_{i}\\right)$ 相同。确实，由于在{eq}`eq:reduced`中，\n",
     "\n",
     "$$\n",
     "p_{i}=\\left(\\beta_{s}\\alpha_{d}+\\beta_{d}\\alpha_{s}+\\beta_{s}e_{di}+\\beta_{d}e_{si}\\right)/\\left(\\beta_{s}+\\beta_{d}\\right)\n",
@@ -444,20 +431,21 @@
     "这是供需系统的经典例子。结构参数无法被直接识别，因为观察到的\n",
     "$\\left(p_{i},q_{i}\\right)$ 是均衡的结果——需求曲线和供给曲线的交叉点。\n",
     "为了识别需求曲线，我们需要一个仅移动供给曲线的工具；反之亦然。\n",
-    "\n"
+    "\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "这是借用 Hayashi (2000, p.193) 的模型，但其源自 @haavelmo1943statistical。\n",
+    "```{prf:example} 凯恩斯型方程\n",
+    "这是借用 Hayashi (2000, p.193) 的模型，但其源自{cite}`haavelmo1943statistical`。\n",
     "一位计量经济学家想求出 $\\beta_{2}$， 也就是凯恩斯型方程中的 **边际消费倾向** :\n",
     "\n",
     "$$\n",
-    "C_{i}=\\beta_{1}+\\beta_{2}Y_{i}+u_{i}\\label{eq:keynes}\n",
-    "$$\n",
+    "C_{i}=\\beta_{1}+\\beta_{2}Y_{i}+u_{i}\n",
+    "$$(eq:keynes)\n",
     "\n",
     "其中 $C_{i}$ 是家庭消费，$Y_{i}$ 是 GNP，而 $u_{i}$ 是不可观察误差。\n",
     "但是，$Y_{i}$ 和 $C_{i}$ 通过一个会计等式连接（没有误差）\n",
@@ -508,26 +496,25 @@
     "\\end{pmatrix}.\\end{aligned}\n",
     "$$\n",
     "\n",
-    "OLS\n",
-    "([\\[eq:keynes\\]](#eq:keynes){reference-type=\"ref\"\n",
-    "reference=\"eq:keynes\"}) 将不一致，因为在简化形式中，\n",
+    "OLS{eq}`eq:keynes`将不一致，因为在简化形式中，\n",
     "$Y_{i}=\\frac{1}{1-\\beta_{2}}\\left(\\beta_{1}+u_{i}+I_{i}\\right)$ 意味着\n",
-    "$\\mathbb{E}\\left[Y_{i}u_{i}\\right]=\\mathbb{E}\\left[u_{i}^{2}\\right]/\\left(1-\\beta_{2}\\right)\\neq0$.\n",
+    "$\\mathbb{E}\\left[Y_{i}u_{i}\\right]=\\mathbb{E}\\left[u_{i}^{2}\\right]/\\left(1-\\beta_{2}\\right)\\neq0$。\n",
+    "```\n",
     "\n",
-    "总结\n",
-    "-------\n",
+    "## 总结\n",
+    "\n",
     "\n",
     "尽管我们经常处理具有潜在内生变量的单方程模型，但基础的结构系统可能涉及多个方程。\n",
     "联立方程模型是一种经典的计量经济学建模方法，它在结构经济研究中仍然得到积极应用。\n",
     "当我们的经济模型是“结构性”时，我们需要牢记一个因果机制。在这里我们不会像在第2章中\n",
     "那样通过对照组和治疗组来确定因果关系，而将会从经济结构的角度来看待因果关系。\n",
     "\n",
-    "**历史注释**: 工具最初出现在 Philip @wright1928tariff 中，\n",
+    "**历史注释**: 工具最初出现在{cite}`wright1928tariff`中，\n",
     "用于识别内生变量的系数。这被认为是与Philip的儿子Sewall Wright合作产生的想法。\n",
-    "供需分析归因于 @working1927statistical，而测量误差研究来源于 @fricsh1934statistical。\n",
+    "供需分析归因于{cite}`working1927statistical`，而测量误差研究来源于{cite}`fricsh1934statistical`。\n",
     "\n",
-    "**拓展阅读**: 因果关系是计量经济学的圣杯。@pearl2018book 是一本颇具哲理的畅销书。\n",
-    "阅读它是一种享受。 [@chen2011nonlinear] 是对现代非线性测量误差模型的一个文献综述。\n"
+    "**拓展阅读**: 因果关系是计量经济学的圣杯。{cite}`pearl2018book` 是一本颇具哲理的畅销书。\n",
+    "阅读它是一种享受。{cite}`chen2011nonlinear` 是对现代非线性测量误差模型的一个文献综述。\n"
    ]
   }
  ],
