--- a/lecture8-CN.ipynb
+++ b/lecture8-CN.ipynb
@@ -415,7 +415,7 @@
     "其中 $ \\widehat{\\Omega} $ 是 $ \\Omega $ 的相合估计量。\n",
     "\n",
     "\n",
-    "```{admonition} Single test \n",
+    "```{admonition} \n",
     "\n",
     "\n",
     "在线性回归一个针对工资 $ y $ 的线性回归中, 自变量为\n",
@@ -742,7 +742,7 @@
     "\n",
     "## 总结\n",
     "\n",
-    "不少应用计量经济学家希望在变量间建立统计学上的关联关系，甚至建立因果关系，因此他们非常看重假设检验，更有甚者，成为痴迷的观星者(stargazer)。假设检验是统计学中的重要领域。表格{ref}`表格8.1 <mytable>`中的状态和决策提醒了我们它和博弈论的关系。我作为一个参与者，正在与自然界进行一个序列博弈。\n",
+    "不少应用计量经济学家希望在变量间建立统计学上的关联关系，甚至建立因果关系，因此他们非常看重假设检验，更有甚者，成为痴迷的观星者(stargazer)。假设检验是统计学中的重要领域。{ref}`表格8.1 <mytable>`中的状态和决策提醒了我们它和博弈论的关系。我作为一个参与者，正在与自然界进行一个序列博弈。\n",
     "\n",
     "\n",
     "* Step 0:  根据某个科学理论, 参数空间 $ \\Theta $ 被划分为零假设 $ \\Theta_{0} $ 和备择假设 $ \\Theta_{1} $ 。\n",
