working on lec1

--- a/lecture1-CN.ipynb
+++ b/lecture1-CN.ipynb
@@ -7,19 +7,19 @@
    "source": [
     "# 概率\n",
     "\n",
-    "对于日常生活中的不确定性，人们总会不由自主地心生敬畏。在过去，古埃及人依靠祭司，希伯来人崇敬先知，而中国则通过卜师来解读龟甲或者兽骨的裂纹。在今日的香港，还有不少人光顾在庙街一带摆摊设点的算命先生。\n",
+    "对于日常生活中的不确定性，人们总会不由自主地心生敬畏。在过去，古埃及人依靠祭司，希伯来人崇敬先知，而中国的先人则通过卜师来解读龟甲或者兽骨的裂纹。在今日的香港，还有不少人乐于光顾在庙街一带摆摊设点的算命先生来帮助他们解答生命中的困惑。\n",
     "\n",
     "概率论是一门关于不确定性的哲学。几百年来，全世界的数学家们都在苦心孤诣试图理解随机背后的规律。随着测度理论在20世纪早期发展成熟，Andrey\n",
     "Kolmogorov (1903-1987) 在1933年发表的专著是当代概率论的里程碑。当中使用的数学语言系统逻辑严谨、自洽，为未来该领域的进一步探索提供了起点。目前，这一套数学语言已经广泛地被学界所接受。\n",
     "\n",
-    "本讲将会简要介绍概率论的公理以及在本科阶段的 **概率论与数理统计** 中已经为我们所熟悉的理论。\n",
+    "本讲将会简要介绍概率论的公理以及在本科阶段的**概率论与数理统计**中已经为我们所熟悉的理论。\n",
     "\n",
     "## 概率论的公理\n",
     "\n",
     "### 概率空间\n",
     "\n",
-    "**样本空间** $\\Omega$ 是所有可能结果的一个集合。**事件** $A$ 是$\\Omega$\n",
-    "的一个子集。我们常用$\\mathcal{F}$表示的$\\sigma$-**域** ($\\sigma$ field)\n",
+    "**样本空间** $\\Omega$ 是所有可能结果的一个集合。**事件** $A$ 是 $\\Omega$\n",
+    "的一个子集。我们常用 $\\mathcal{F}$ 表示 $\\sigma$-**域** ($\\sigma$ field)\n",
     "，它是满足如下条件的事件的集合：\n",
     "\n",
     "1. $\\emptyset\\in\\mathcal{F}$;\n",
@@ -42,12 +42,13 @@
    "source": [
     "\n",
     "```{prf:remark} \n",
-    "从直觉来看，$\\sigma$ 域是允许可数(countable)个集合进行并集、差集和交集操作的封闭域。因为以上这些都是集合的代数计算，所以 $\\sigma$ 域也叫做 $\\sigma$ 代数。\n",
+    "从直觉来看，$\\sigma$ 域是允许可数(countable)个集合进行并集、差集和交集操作的封闭域。因为以上这些都是集合的代数计算，\n",
+    "所以 $\\sigma$ 域也叫做 $\\sigma$ **代数**。\n",
     "```\n",
     "\n",
     "```{prf:example}\n",
     "令 $\\Omega=\\{1,2,3,4,5,6\\}$ 。\n",
-    "以下是一些 $\\sigma$ **域**($\\sigma$ field)的例子：\n",
+    "以下是一些 $\\sigma$-域的例子：\n",
     "\n",
     "-   $\\mathcal{F}_{1}=\\{\\emptyset,\\{1,2,3\\},\\{4,5,6\\},\\Omega\\}$;\n",
     "\n",
@@ -65,10 +66,13 @@
    "id": "c9cc8565",
    "metadata": {},
    "source": [
-    "$\\sigma$ 域是在样本空间 $\\Omega$ 上建立的严谨架构。两者放在一起，\n",
+    "$\\sigma$ 域是在样本空间 $\\Omega$ 上建立的严谨架构。将两者放在一起，\n",
     "$\\left(\\Omega,\\mathcal{F}\\right)$ 称为 **可测空间** (measurable space)。\n",
     "\n",
-    "令 $\\mathcal{G}=\\{B_{1},B_{2},\\ldots\\}$ 为任意的一个集合。如果满足条件 $\\mathcal{G}\\subseteq\\mathcal{F}$ ，而且对于任意的 $\\mathcal{\\tilde{F}}$ ， $\\mathcal{F}\\subseteq\\mathcal{\\tilde{F}}$ ，则称 $\\mathcal{F}$ 为 $\\mathcal{G}$ 产生的 **最小$\\sigma$ 域** 。一个 **波莱尔** $\\sigma$ 域是由实数 $\\mathbb{R}$ 上的所有开集生成的最小 $\\sigma$ 域。\n",
+    "令 $\\mathcal{G}=\\{B_{1},B_{2},\\ldots\\}$ 为任意的一个集合。如果满足条件 \n",
+    "(i) $\\mathcal{G}\\subseteq\\mathcal{F}$ ，\n",
+    "(ii) 对于任意的包含 $\\mathcal{G}$ 的 $\\sigma$ 域 $\\mathcal{\\tilde{F}}$，都有 $\\mathcal{F}\\subseteq\\mathcal{\\tilde{F}}$，\n",
+    "我们就称 $\\mathcal{F}$ 是由 $\\mathcal{G}$ 产生的**最小$\\sigma$ 域** 。\n",
     "\n",
     "```{prf:example}\n",
     "令 $\\Omega=\\{1,2,3,4,5,6\\}$ ,且令 $\\mathcal{A}=\\{\\{1\\},\\{1,3\\}\\}$。\n",
@@ -80,12 +84,14 @@
     "\n",
     "```\n",
     "\n",
+    "**波莱尔 $\\sigma$ 域**是由实数 $\\mathbb{R}$ 上的所有开集生成的最小 $\\sigma$ 域。\n",
+    "\n",
     "如果函数 $\\mu:(\\Omega,\\mathcal{F})\\mapsto\\left[0,\\infty\\right]$\n",
     "满足如下条件\n",
     "\n",
     "1. (非负性) 对任意 $A\\in\\mathcal{F}$，都有 $\\mu\\left(A\\right)\\geq0$;\n",
     "\n",
-    "2. (可列可加性) 如果对于任意的 $i\\in\\mathbb{N}$ , $A_{i}\\in\\mathcal{F}$ 互不相交,则\n",
+    "2. (可列可加性) 如果对于任意的 $i\\in\\mathbb{N}$，$A_{i}\\in\\mathcal{F}$ 互不相交，则\n",
     "\n",
     "    $$\n",
     "    \\mu\\left(\\bigcup_{i\\in\\mathbb{N}}A_{i}\\right)=\\sum_{i\\in\\mathbb{N}}\\mu\\left(A_{i}\\right),\n",
@@ -96,13 +102,13 @@
     "测度可以类比于日常生活中的宽度或重量来理解。\n",
     "特别是，当 $\\mu\\left(\\Omega\\right)=1$，\n",
     "我们就称 $\\mu$ 为**概率测度**。 概率测度通常用符号 $P$ 来指代。\n",
-    "在可测空间之上赋予一个概率测度，这三者\n",
-    "$\\left(\\Omega,\\mathcal{F},P\\right)$ 称 **概率空间** (probability space)。\n",
+    "在可测空间之上赋予$\\left(\\Omega,\\mathcal{F}\\right)$ 概率测度 $P$，这三者\n",
+    "$\\left(\\Omega,\\mathcal{F},P\\right)$ 称为 **概率空间** (probability space)。\n",
     "\n",
     "目前为止我们已经回答了问题:\n",
     "“什么是一个数学意义上定义完备的概率?”，但我们还没有回答一个问题“怎么分配概率？”\n",
-    "在概率分配中有两个主流的学派：**频率学派** 把概率视作大样本实验之后出现结果的平均频率；\n",
-    "而 **贝叶斯学派** 把概率解释为对于事情发生可能性的主观信念。\n",
+    "在概率分配中有两个主流的学派：**频率学派**把概率视作多次实验之后出现结果的平均频率；\n",
+    "而**贝叶斯学派**把概率解释为对于事情发生可能性的主观信念。\n",
     "两个学派的理论基本上互不兼容，他们的主张根据实际应用场景各有优缺点。\n",
     "有关这两个学派观点会在有关假设检验的章节涉及。\n"
    ]
@@ -113,6 +119,8 @@
    "metadata": {},
    "source": [
     "### 随机变量\n",
+    "\n",
+    "<!-- ZT revised up here. 10/20/2022 -->\n",
     "\n",
     "术语 **随机变量**\n",
     "是一个历史遗留下来的称呼，实际上如果考虑到它定义中映射的确定性，这个术语会显得有一点“名不副实”。\n",
