Revision of lecture 8，9, 10，11
* Lecture 10 hasn't finished its translation yet.

--- a/lecture11-CN.ipynb
+++ b/lecture11-CN.ipynb
@@ -13,7 +13,7 @@
    "id": "41b75691",
    "metadata": {},
    "source": [
-    "**广义矩估计**(*Generalized method of moments*  GMM )是基于矩估计思想延申出来的一种估计方法。它的主要思路是，在矩条件的个数大于参数的个数的情况下，求解距离函数(矩二次型)的最小值。由此得到的估计量就是广义矩估计量。因此，对于那些本身就蕴含着矩条件的经济学模型来说，GMM无疑是一种方便又有效的方法。自诞生以来，GMM就一直是当代计量经济学理论的宠儿。它是一个极具综合性的计量方法，在它之前的2SLS、GLS、SUR和Pooled OLS等一系列传统计量模型都是它的特殊情况。"
+    "**广义矩估计**(Generalized method of moments， GMM )是基于矩估计思想拓展出来的一种估计方法。它的主要思想是，在矩条件的个数大于参数的个数的情况下，求解距离函数(矩二次型)的最小值。由此得到的估计量就是广义矩估计量。因此，对于那些本身就蕴含着矩条件的经济学模型来说，GMM无疑是方便有效的方法。自诞生以来，GMM就一直是当代计量经济学理论的宠儿。它是通用的方法，在它之前的最小二乘法(2SLS)、似无关回归(seemingly unrelated regression)以及Pooled OLS等一系列传统计量模型都是它的特殊情况。"
    ]
   },
   {
@@ -32,11 +32,11 @@
     "我们先来讨论有 $K$ 个回归量的线性回归方程\n",
     "\n",
     "$$\n",
-    "y_{i}='\\beta+\\epsilon_{i}.\n",
+    "y_{i}=x_{i}'\\beta+\\varepsilon_{i}.\n",
     "$$\n",
     "\n",
     "在统计学视角中，只有可识别(identification)的结构方程才能够进行估计。\n",
-    "从计量的角度来说，可识别指的是对于联立方程模型中的每一个结构方程，都能够得到确定的参数估计值。如果一个方程系统中存在一个不可识别的随机方程，那么我们认为该联立方程模型是不可识别的。\n",
+    "从计量的角度来说，可识别指的是对于联立方程模型中的每一个结构方程，在总体模型中都能够得到确定的唯一参数值。如果一个方程系统中存在一个不可识别的随机方程，那么我们认为该联立方程模型是不可识别的。\n",
     "\n",
     "从数学推导的角度则可以这样理解：如果把所有工具变量所构成的向量记为 $L\\times1$ 的向量 $z_{i}$ (可以包含 $x_{i}$ ，即外生变量也能作为工具变量)， $z_{i}$ 满足 $\\mathbb{E}\\left[z_{i}\\epsilon_{i}\\right]=0_{L}$ 且$\\Sigma:=\\mathbb{E}\\left[z_{i}x_{i}'\\right]$ 列满秩；记 $\\beta_{0}$ 记为方程 $E\\left[z_{i}\\left(y_{i}-x_{i}'\\beta\\right)\\right]=0_{L}$ 的根，由于矩阵列满秩， $\\beta_{0}$ 为该线性方程组的唯一解。这种方程只有唯一解的情况就是我们所认为的成功识别。一般情况下，我们默认回归模型是可识别的。\n"
    ]
@@ -46,7 +46,7 @@
    "id": "03fcec91",
    "metadata": {},
    "source": [
-    "### 过度识别\n",
+    "### 识别\n",
     "\n",
     "当 $L=K$ ，我们称之为 **恰好识别** (just-identified 或 exactly identified)。\n",
     "通过正交条件能够得到：\n",
@@ -61,33 +61,35 @@
     "\\beta_{0}=\\Sigma^{-1}\\mathbb{E}\\left[z_{i}y_{i}\\right]\n",
     "$$(eqn:just_beta)\n",
     "\n",
-    "求得 $\\beta_{0}$ 的封闭解后，我们就可以用样本矩来代替总体矩。这种方法也是一种矩估计。\n",
-    "```{prf:definition} 封闭解\n",
-    "**封闭解**：封闭解(Closed-form solution)，也叫作解析解(Analytic solution)。就是根据严格的推导和计算能够得出解的具体函数，这样在得知任意的自变量的值，就能够根据表达式计算出具体的解。与之相对的是数值解(numerical solution)，指的是不能通过计算得出具体的函数形式的解，只能够通过逼近或者插值等方法求解出特定问题对应的近似解的数值。\n",
+    "求得 $\\beta_{0}$ 的封闭解后，我们就可以用样本矩来代替总体矩。这种方法是一种矩估计(method of moments)。\n",
+    "```{prf:remark} 封闭解\n",
+    "**封闭解**：封闭解(Closed-form solution)，也叫作解析解(Analytic solution)。就是将估计量表示为数据的具体显示函数。与之相对的是数值解(numerical solution)，指的是不能通过计算得出具体的函数形式的解，只能够通过逼近或者插值等方法求解出特定问题对应的近似解的数值。\n",
+    "\n",
+    "例如，最小二乘估计量 $\\hat\\beta = \\left(X'X\\right)^{-1}X'Y$ 就是一个封闭解，因为等式右边是可观测数据 $X$ 和 $Y$ 的一个函数。相反，最小一乘估计(least absolute deviation) $min_{\\beta}\\sum_{i=1}^n|y_i-x_i'\\beta|$ 没有封闭解。\n",
     "```\n",
     "```{prf:definition} 正交条件\n",
     "**正交条件**：前面提到，$\\mathbb{E}\\left[z_{i}\\epsilon_{i}\\right]=0_{L}$ 。这是由工具变量所提供的总体矩条件。而在统计学中，如果两个随机变量乘积的期望为0，则称这两个随机变量正交。因此，通常总体矩条件也会被称之为正交条件(orthogonality conditions)\n",
     "```\n",
-    "而当 $L>K$ ，模型过度识别(over identification)。同样可以根据正交条件得到：\n",
+    "而当 $L>K$ ，模型过度识别(over identification)。根据正交条件，我们可以得到：\n",
     "\n",
     "$$\n",
     "\\Sigma\\beta_{0}=\\mathbb{E}\\left[z_{i}y_{i}\\right],\n",
     "$$(eq:moment2)\n",
     "\n",
-    "但由于 $\\Sigma$ 不是一个方阵，因此不能像 {eq}`eqn:just_beta` 一样直接对 $\\Sigma$ 求逆矩阵来计算 $\\beta_{0}$ 。\n",
-    "为了求解 $\\beta$ ，我们可以定义目标函数\n",
+    "但由于 $\\Sigma$ 不是一个方阵，因此不能像 {eq}`eqn:just_beta` 一样直接对 $\\Sigma$ 求逆来计算 $\\beta_{0}$。\n",
+    "为了求解 $\\beta$，我们可以定义目标函数\n",
     "\n",
     "$$\n",
     "Q\\left(\\beta\\right)=\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]'W\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right].\n",
     "$$\n",
     "\n",
-    "其中 $W$ 是一个 $L\\times L$ 的非随机正定对称矩阵(如何选择 $W$ 的问题我们也将在后面讨论到)。由于 $Q\\left(\\beta\\right)$ 为二次型，依据正定矩阵的定义，无论 $\\beta$ 为何值都满足 $Q\\left(\\beta\\right)\\geq 0$ 。同时 **识别** 又意味着等式 $Q\\left(\\beta\\right)=0$ 当且仅当 $\\beta=\\beta_{0}$ 时成立。于是结合上述两个式子可以得到：\n",
+    "其中 $W$ 是一个 $L\\times L$ 的非随机正定对称矩阵(如何选择 $W$ 的问题我们也将在后面讨论)。由于 $Q\\left(\\beta\\right)$ 为二次型，依据正定矩阵的定义，无论 $\\beta$ 为何值都满足 $Q\\left(\\beta\\right)\\geq 0$ 。同时 **识别** 又意味着当且仅当 $\\beta=\\beta_{0}$ 时成立。结合上述得：\n",
     "\n",
     "$$\n",
     "\\beta_{0}=\\arg\\min_{\\beta}Q\\left(\\beta\\right)\n",
     "$$\n",
     "\n",
-    "即 $\\beta_{0}$ 是目标函数 $Q\\left(\\beta\\right)$ 取到最小值时对应的唯一变量值。\n",
+    "即 $\\beta_{0}$ 是目标函数 $Q\\left(\\beta\\right)$ 取到最小值时对应的唯一参数值。\n",
     "又因为 $Q\\left(\\beta\\right)$ 是一个 $\\beta$ 的光滑函数， $\\beta_{0}$ 可以用一阶条件来计算：\n",
     "\n",
     "$$\n",
@@ -100,7 +102,7 @@
     "\\Sigma'W\\Sigma\\beta_{0}=\\Sigma'W\\mathbb{E}\\left[z_{i}y_{i}\\right].\n",
     "$$\n",
     "\n",
-    "在 $\\Sigma$ 满秩的条件下， $\\Sigma'W\\Sigma$ 可逆， 因此我们可以解得：\n",
+    "在 $\\Sigma$ 满秩的条件下， $L\\times L$ 矩阵 $\\Sigma'W\\Sigma$ 可逆， 因此我们解得：\n",
     "\n",
     "$$\n",
     "\\beta_{0}=\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\mathbb{E}\\left[z_{i}y_{i}\\right].\n",
@@ -122,7 +124,7 @@
    "id": "d7209b9a",
    "metadata": {},
    "source": [
-    "尽管我们把恰好识别和过度识别分开讨论，实际上前者 {eq}`eqn:just_beta` 是后者 {eq}`eq:over_beta` 的一种特殊情况。从这个角度上说，GMM是真正意义上的“广义”的矩估计。要理解这个概念，需要注意到当 $L=K$ 时， 由于 $\\Sigma$ 是方阵，给定任意的 $W$ 都能得到：\n",
+    "尽管我们把恰好识别和过度识别分开讨论，实际上{eq}`eqn:just_beta`是{eq}`eq:over_beta` 的一种特殊情况。从这个角度上说，GMM是真正意义上的“广义”的矩估计。要理解这个概念，需要注意到当 $L=K$ 时， 由于 $\\Sigma$ 是方阵，给定任意的 $W$ 都能得到：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -172,7 +174,7 @@
     "Q_{n}\\left(\\beta\\right)=\\left[\\frac{1}{n}\\sum_{i=1}^{n}z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]'W\\left[\\frac{1}{n}\\sum_{i=1}^{n}z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]=\\frac{\\left(y-X\\beta\\right)'Z}{n}W\\frac{Z'\\left(y-X\\beta\\right)}{n}\n",
     "$$\n",
     "\n",
-    "或者简化为：\n",
+    "或者简化为矩阵表达式：\n",
     "$\\hat{\\beta}=\\arg\\min_{\\beta}\\left(y-X\\beta\\right)'ZWZ'\\left(y-X\\beta\\right).$\n",
     "```"
    ]
@@ -186,12 +188,12 @@
     "现在我们来验证 $\\widehat{\\beta}$ 的渐近性质。以下是一系列的假设：\n",
     "\n",
     "\n",
-    "```{prf:assumption} 假设 11.1\n",
+    "```{prf:assumption} 大数定律\n",
     ":label: A.1\n",
     "$Z'X/n\\stackrel{\\mathrm{p}}{\\to}\\Sigma$ 和 $Z'\\epsilon/n\\stackrel{\\mathrm{p}}{\\to}0_{L}$\n",
     "```\n",
     "\n",
-    "A.1 假设我们可以使用大数定律，以至于 $Z'X/n$ 和 $Z'\\epsilon/n$ 依概率收敛于总体的真实值。\n"
+    "{prf:ref}`大数定律<A.1>`我们可以使用大数定律让 $Z'X/n$ 和 $Z'\\epsilon/n$ 依概率收敛于总体的真实值。\n"
    ]
   },
   {
@@ -201,10 +203,11 @@
    "source": [
     "```{admonition} 定理 11.1 \n",
     "\n",
-    "基于假设{prf:ref}`A.1`， $\\widehat{\\beta}$ 是相合的。\n",
+    "基于假设{prf:ref}`大数定律<A.1>`， $\\widehat{\\beta}$ 是相合的。\n",
     "```\n",
     "\n",
-    "**证明** ：这里的证明步骤与证明OLS估计量的相合性类似\n",
+    "```{prf:proof}\n",
+    "这里的证明步骤与证明OLS估计量的相合性类似\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -212,7 +215,7 @@
     " & =\\beta_{0}+\\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{Z'\\epsilon}{n}\\\\\n",
     " & \\stackrel{\\mathrm{p}}{\\to}\\beta_{0}+\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W0=\\beta_{0}.\\end{aligned}\n",
     "$$\n",
-    "\n"
+    "```\n"
    ]
   },
   {
@@ -223,7 +226,7 @@
     "\n",
     "为了验证渐近的正态性，我们假设中心极限定理成立。\n",
     "\n",
-    "```{prf:assumption}\n",
+    "```{prf:assumption} 中心极限定理\n",
     ":label: A.2\n",
     "$$\n",
     "\\frac{1}{\\sqrt{n}}\\sum_{i=1}^{n}z_{i}\\epsilon_{i}\\stackrel{d}{\\to}N\\left(0_{L},\\Omega\\right)\n",
@@ -233,8 +236,8 @@
     "```\n",
     "\n",
     "\n",
-    "```{prf:theorem} 定理 11.2 (渐进正态性)\n",
-    "基于假设{prf:ref}`A.1` 和{prf:ref}`A.2`有：\n",
+    "```{prf:theorem} 渐进正态性\n",
+    "基于{prf:ref}`大数定律<A.1>` 和{prf:ref}`中心极限定理<A.2>`有：\n",
     "\n",
     "$$\n",
     "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta_{0}\\right)\\stackrel{d}{\\to}N\\left(0_{K},\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\Omega W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}\\right).\\label{eq:normality}.\n",
@@ -249,7 +252,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "**证明** ：在 $(\\widehat{\\beta}-\\beta_{0})$ 之前乘上 $\\sqrt{n}$ 可以得到\n",
+    "```{prf:proof} \n",
+    "在 $(\\widehat{\\beta}-\\beta_{0})$ 之前乘上 $\\sqrt{n}$ 可以得到\n",
     "\n",
     "$$\n",
     "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta_{0}\\right)=\\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{Z'\\epsilon}{\\sqrt{n}}=\\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{1}{\\sqrt{n}}\\sum_{i=1}^{n}z_{i}'\\epsilon_{i}.\n",
@@ -267,7 +271,8 @@
     "\\frac{X'Z}{n}W\\frac{1}{\\sqrt{n}}\\sum z_{i}'\\epsilon_{i}\\stackrel{d}{\\to}\\Sigma'W\\times N\\left(0,\\Omega\\right)\\sim N\\left(0,\\Sigma'W\\Omega W\\Sigma\\right).\n",
     "$$\n",
     "\n",
-    "根据上述两个式子，代入{eq}`eq:as_normal`，并使用Slusky's Theorem，就能得到方差最小的有效估计量。"
+    "根据上述两个式子，代入{eq}`eq:as_normal`，并使用Slusky's Theorem，就能得到方差最小的有效估计量。\n",
+    "```"
    ]
   },
   {
@@ -277,7 +282,7 @@
    "source": [
     "### 有效GMM\n",
     "\n",
-    "从 {eq}`eq:as_normal` 中我们可以清楚地知道，GMM估计量的渐近方差取决于 $W$ 。 哪一个 $W$ 会使得渐近方差尽可能小呢?\n",
+    "从{eq}`eq:as_normal`中我们可以清楚地知道，GMM估计量的渐近方差取决于 $W$。 哪一个 $W$ 会使得渐近方差尽可能小呢?\n",
     "答案是 $W=\\Omega^{-1}$。将其代入公式就能得到有效渐近方差\n",
     "\n",
     "$$\n",
@@ -290,6 +295,7 @@
    "id": "6bc9ed3c",
    "metadata": {},
    "source": [
+    "以下证明其有效性\n",
     "\n",
     "```{prf:proposition}  \n",
     "对于任意的正定对称矩阵 $W$ ，它与渐近方差之间的差：\n",
@@ -308,7 +314,8 @@
    "id": "2699848c",
    "metadata": {},
    "source": [
-    "**证明** ：为了简化符号，记\n",
+    "```{prf:proof}\n",
+    "为了简化符号，记\n",
     "$A:=W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}$ 以及\n",
     "$B:=\\Omega^{-1}\\Sigma\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}$ ，然后两个矩阵的差值变为：\n",
     "\n",
@@ -337,7 +344,8 @@
     "\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\Omega W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}-\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}=\\left(A-B\\right)'\\Omega\\left(A-B\\right)\n",
     "$$\n",
     "\n",
-    "为半正定矩阵。"
+    "为半正定矩阵。\n",
+    "```"
    ]
   },
   {
@@ -349,7 +357,7 @@
     "\n",
     "**两阶段GMM** 能够用来构造可行的有效GMM估计量。\n",
     "```{prf:definition} 可行估计量\n",
-    "这里的可行估计量指的是不带有任何的位置参数，可以直接利用数据计算的统计量。与之相对的，不可行统计量的表达式中存在需要估计的未知参数，不能直接通过数据求解不可行统计量\n",
+    "这里的可行估计量指的是不带有任何的参数，可以直接利用数据计算的统计量。与之相对的，不可行统计量的表达式中存在需要估计的未知参数。实际中，我们无法直接通过数据求解不可行统计量。\n",
     "```\n",
     "\n",
     "1.  如果我们选定任意 $W$ ，比如令 $W=I_{L}$ ，从而得到相合 (但通常不有效) 的估计量\n",
@@ -367,7 +375,7 @@
     "$$\n",
     "\n",
     "第二个估计量是渐近有效的。\n",
-    "```{prf:exercise} 练习 11.2 \n",
+    "```{prf:exercise}\n",
     "可以看出如果 $\\widehat{\\Omega}\\stackrel{p}{\\to}\\Omega$，那么\n",
     "$\\sqrt{n}\\left(\\widehat{\\beta}^{\\natural}(\\widehat{\\Omega}^{-1})-\\widehat{\\beta}\\left(\\Omega^{-1}\\right)\\right)\\stackrel{p}{\\to}0$ 。\n",
     "换言之，可行估计量\n",
@@ -391,7 +399,7 @@
     "\\Omega=\\mathbb{E}\\left[z_{i}z_{i}'\\epsilon_{i}^{2}\\right]=\\mathbb{E}\\left[z_{i}z_{i}'\\mathbb{E}\\left[\\epsilon_{i}^{2}|z_{i}\\right]\\right]=\\sigma^{2}\\mathbb{E}\\left[z_{i}z_{i}'\\right].\n",
     "$$\n",
     "\n",
-    "在两阶段 GMM 中的第一步中，我们可以用 $\\widehat{\\sigma}^{2}=\\frac{1}{n}\\sum_{i=1}^{n}\\widehat{\\epsilon}_{i}^{2}$ 估计方差的误差项，用$\\widehat{\\Omega}=\\widehat{\\sigma}^{2}\\frac{1}{n}\\sum_{i=1}^{n}z_{i}z_{i}'=\\widehat{\\sigma}^{2}Z'Z/n$ 估计方差矩阵。我们把 $W=\\widehat{\\Omega}^{-1}$ 代入到 GMM 估计量中：\n",
+    "在两阶段 GMM 中的第一步中，我们可以用 $\\widehat{\\sigma}^{2}=\\frac{1}{n}\\sum_{i=1}^{n}\\widehat{\\epsilon}_{i}^{2}$ 估计误差项的方差，用$\\widehat{\\Omega}=\\widehat{\\sigma}^{2}\\frac{1}{n}\\sum_{i=1}^{n}z_{i}z_{i}'=\\widehat{\\sigma}^{2}Z'Z/n$ 估计方差矩阵。我们把 $W=\\widehat{\\Omega}^{-1}$ 代入到 GMM 估计量中：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -402,11 +410,11 @@
     "\n",
     "当 $L>K$ 时，这个表达式与 2SLS 表达式完全一致。因此， 两阶段最小二乘可以被视为带有权重矩阵 $\\left(Z'Z/n\\right)^{-1}$ 的特殊GMM。在条件同方差假设下，2SLS 是有效估计量。尽管 2SLS 十分受学者们的欢迎，但在异方差的情况下它并不是有效估计量。\n",
     "\n",
-    "```{prf:remark} 评注 11.3\n",
+    "```{prf:remark} \n",
     "就如同它的名字一样，2SLS 的计算分为两步: 首先用所有工具变量 $Z$ 对 $X$ 进行回归，之后用计算得到的预测值对 $y$ 进行回归。不过，2SLS实际上可以通过上述等式一步得到，因为它是GMM的特例。\n",
     "```\n",
     "\n",
-    "```{prf:remark} 评注 11.4\n",
+    "```{prf:remark}\n",
     "如果有效估计量不难计算，计量经济学者会更倾向于使用有效估计量。使用有效估计量的好处不仅仅在于系数估计更加精确。许多专门的检验，比如之后我们将介绍的 $J$-统计量，将依赖于有效估计量在原假设中得到 $\\chi^{2}$ 分布。否则它们的渐进分布将是非标准的，分布的临界值将只能用蒙特卡罗方法(Monte Carlo simulations)才能找到。\n",
     "```"
    ]
@@ -425,7 +433,7 @@
     "Q\\left(\\beta\\right)=\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]'W\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]\n",
     "$$\n",
     "\n",
-    "```{admonition} Example 11.1\n",
+    "```{prf:example}\n",
     "线性模型是非线性模型的一种特殊情况。在前面章节提到的线性工具变量模型中，数据是\n",
     "$s_{i}=\\left(y_{i},x_{i},z_{i}\\right)$，且矩函数为\n",
     "$g\\left(s_{i},\\beta\\right)=z_{i}'\\left(y_{i}-x_{i}\\beta\\right)$.\n",
@@ -444,7 +452,7 @@
     "\n",
     "尽管这些非线性模型往往不存在封闭解，但是它们的渐近性质依然成立。在此我们不给出具体证明，对这些渐近性质作一下简要介绍： \n",
     "\n",
-    "```{prf:theorem} 定理 11.3 \n",
+    "```{prf:theorem} \n",
     "(a) 如果模型是可识别的，且对于任意常数 $\\varepsilon>0$ \n",
     "\n",
     "$$\n",
@@ -468,8 +476,8 @@
     "$\\Omega=\\mathbb{E}\\left[g_{i}\\left(\\beta_{0}\\right)g_{i}\\left(\\beta_{0}\\right)'\\right]$.\n",
     "\n",
     "(c) 如果我们令 $W=\\Omega^{-1}$ ，能够得到有效估计量，\n",
-    "渐近方差会变为：\n",
-    "$\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}$.\n",
+    "渐近方差会变为 $\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}$。\n",
+    "```\n",
     "```{prf:remark} 评注 11.5\n",
     "以上只列出了几个关键假设，而略过了其中的一些技术细节。\n",
     "```\n",
@@ -506,9 +514,7 @@
     "**历史轶闻**: 2SLS 的发现归功于 {cite}`theil1953repeated` 。在线性工具变量模型中， $J$-统计量由\n",
     "{cite}`sargan1958estimation` 提出。 {cite}`hansen1982large` 把它推广到非线性模型中。\n",
     "\n",
-    "**拓展阅读**:  在面对大量数据时，GMM 的二次型将要面对大量的矩条件。然而现实情况是，在有大量的矩条件时，往往不能很好地估计每一个矩来 拟合我们感兴趣的参数。 **经验似然** 是另一种可供选择的方法，它可以用来进行矩约束模型的估计。{cite}`shi2016econometric` 在经验似然的研究框架下解决了高维矩的估计问题。\n",
-    "\n",
-    "\n"
+    "**拓展阅读**:  GMM 的二次型在要面对大量的矩条件时，往往不能很好地估计每一个矩来拟合我们感兴趣的参数。 **经验似然** 是另一种可供选择的方法，它可以用来进行矩约束模型的估计。{cite}`shi2016econometric` 在经验似然的研究框架下解决了高维矩的估计问题。\n"
    ]
   }
  ],
