--- a/lecture8-CN.ipynb
+++ b/lecture8-CN.ipynb
@@ -96,14 +96,16 @@
    "id": "42041f39",
    "metadata": {},
    "source": [
-    "```{table} 表格8.1\n",
+    "```{table}\n",
     ":name: mytable\n",
-    "|  | accept $ H_{0} $ | reject $ H_{0} $ |\n",
-    "| --- | --- | --- |\n",
-    "| $ H_{0} $ true | correct decision | Type I error|\n",
-    "| $ H_{0} $ false | Type II error | correct decision|\n",
-    "\n",
+    "|  | 接受 $ H_{0} $ | 拒绝 $ H_{0} $ |\n",
+    "| :--- | :--- | :--- |\n",
+    "| $ H_{0} $ 成立 | 正确 | 第一类错误 |\n",
+    "| $ H_{0} $ 不成立 | 第二类错误 | 正确 |\n",
     "```\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "-   犯 **第一类错误(Type I error)** 的 **概率** 为\n",
     "    $ \\beta\\left(\\theta\\right) $ , 其中 $ \\theta\\in\\Theta_{0} $ .\n",
