--- a/lecture9-CN.ipynb
+++ b/lecture9-CN.ipynb
@@ -266,7 +266,7 @@
     "固定效应或者随机效应回归的公式并不重要，因为计量经济学软件包就可以自动处理它们的估计和推断。真正重要的是他们在不可观测的个体异质性上概念性的区别。面板数据是经济学里的第一代 **大数据** 。因为面板数据观测值的数量等于横截面数据上的个体数量 $n$ 再乘上时间维度 $T$。它们反映了计量经济学家在控制异质性上的追求，在某些场景下，以使得OLS在因果关系的解释中更加可信。\n",
     "\n",
     "```{admonition} 扩展阅读\n",
-    "{cite}`hsiao2014analysis`是一本关于面板数据的综合性专著。{cite}`su2016identifying`延伸了固定效应模型，解决其他线性参数的群体异质性。\n",
+    "{cite}`hsiao2014analysis`是一本关于面板数据的综合性专著。\n",
     "```\n",
     "\n",
     "` Zhentao Shi. Nov 8, 2020.`"
