--- a/lecture10-CN.ipynb
+++ b/lecture10-CN.ipynb
@@ -402,8 +402,8 @@
     "q_{i}=\\left(\\alpha_{d}+e_{di}-\\alpha_{s}-e_{si}\\right)/\\left(\\beta_{s}+\\beta_{d}\\right)\n",
     "$$\n",
     "\n",
-    "因此对数价格与 $e_{si}$ 和 $e_{di}$ 都相关。由于 $q_{i}$ 在\n",
-    "{eq}`eq:demand`或{eq}`eq:supply`中是内生的（在计量经济学意义上），因此需求弹性和供给弹性都不能与\n",
+    "因此对数价格与 $e_{si}$ 和 $e_{di}$ 都相关。由于在计量经济学意义上， $q_{i}$ 在\n",
+    "{eq}`eq:demand`或{eq}`eq:supply`中是内生的，因此需求弹性和供给弹性都不能与\n",
     "$\\left(p_{i},q_{i}\\right)$ 相同。确实，由于在{eq}`eq:reduced`中，\n",
     "\n",
     "$$\n",
@@ -439,7 +439,7 @@
     "C_{i}=\\beta_{1}+\\beta_{2}Y_{i}+u_{i}\n",
     "$$(eq:keynes)\n",
     "\n",
-    "其中 $C_{i}$ 是家庭消费，$Y_{i}$ 是 GNP，而 $u_{i}$ 是不可观察误差。\n",
+    "其中 $C_{i}$ 是家庭消费，$Y_{i}$ 是 GNP，而 $u_{i}$ 是不可观察的误差。\n",
     "但是，$Y_{i}$ 和 $C_{i}$ 通过一个会计等式连接（没有误差）\n",
     "\n",
     "$$\n",
@@ -506,7 +506,7 @@
     "供需分析归因于{cite}`working1927statistical`，而测量误差研究来源于{cite}`fricsh1934statistical`。\n",
     "\n",
     "**拓展阅读**: 因果关系是计量经济学的圣杯。{cite}`pearl2018book` 是一本颇具哲理的畅销书。\n",
-    "阅读它是一种享受。{cite}`chen2011nonlinear` 是对现代非线性测量误差模型的一个文献综述。\n"
+    "{cite}`chen2011nonlinear` 对现代非线性测量误差模型进行了文献综述。\n"
    ]
   }
  ],
