--- a/lecture11-CN.ipynb
+++ b/lecture11-CN.ipynb
@@ -478,7 +478,7 @@
     "(c) 如果我们令 $W=\\Omega^{-1}$ ，能够得到有效估计量，\n",
     "渐近方差会变为 $\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}$。\n",
     "```\n",
-    "```{prf:remark} 评注 11.5\n",
+    "```{prf:remark} \n",
     "以上只列出了几个关键假设，而略过了其中的一些技术细节。\n",
     "```\n",
     "$Q_{n}\\left(\\beta\\right)$ 是测算这些矩与0之间距离的距离函数。适当的放缩后，它可以作为一个检验统计量。在原假设 $\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]=0_{L}$ 中，\n",
