--- a/lecture8-CN.ipynb
+++ b/lecture8-CN.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "```{prfexample}\n",
+    "```{prf:example}\n",
     "例如, 我们从某未知联合分布中随机抽取 $ \\left(X_{1i}, X_{2i}\\right) _{i=1}^{n} $ 。对于 $ j=1, 2 $ , 已知边际分布 $ X_{ji}\\sim N\\left(\\theta_{j}, 1\\right) $ 。为了检验联合假设 $ \\theta_{1}=\\theta_{2}=0 $ , 我们可以构造一个检验函数\n",
     "\n",
     " $$\n",
