--- a/lecture1-CN.ipynb
+++ b/lecture1-CN.ipynb
@@ -120,28 +120,26 @@
    "source": [
     "### 随机变量\n",
     "\n",
-    "<!-- ZT revised up here. 10/20/2022 -->\n",
-    "\n",
     "术语 **随机变量**\n",
-    "是一个历史遗留下来的称呼，实际上如果考虑到它定义中映射的确定性，这个术语会显得有一点“名不副实”。\n",
-    "随机变量是连接两个测度空间的一种特定的映射，也就意味着置于值域中的任意事件都能追溯到定义域中的一个对应的事件。\n",
-    "\n",
-    "理论上, 如果对于任何的 $B\\in\\mathcal{R}$ \n",
+    "是一个历史遗留下来的称呼，实际上如果考虑到它定义中映射的确定性，这个术语会显得有一点名不副实。\n",
+    "随机变量是连接两个可测空间的一种特定的映射，它要求置于值域中的任意事件都能追溯到定义域中的一个对应的事件。如果对于任何的 $B\\in\\mathcal{R}$，都有 \n",
     "\n",
     "$$\n",
     "X^{-1}\\left(B\\right)=\\left\\{ \\omega\\in\\Omega:X\\left(\\omega\\right)\\in B\\right\\} \\in\\mathcal{F}\n",
     "$$\n",
     "\n",
-    "公式 $X:\\Omega\\mapsto\\mathbb{R}$ ($\\left(\\Omega,\\mathcal{F}\\right)\\backslash\\left(\\mathbb{R},\\mathcal{R}\\right)$)\n",
-    "是 **可测函数** (measurable function)。 **随机变量** 是可测函数带有浪漫气息的别名。由 **随机变量 $X$ 生成的$\\sigma$ 域** 被定义为\n",
+    "我们称 $X:\\Omega\\mapsto\\mathbb{R}$ \n",
+    "是连接 $\\left(\\Omega,\\mathcal{F}\\right)\\backslash\\left(\\mathbb{R},\\mathcal{R}\\right)$\n",
+    "的**可测函数** (measurable function)。 **随机变量** 是可测函数带有浪漫气息的别名。由 **随机变量 $X$ 生成的 $\\sigma$ 域** 被定义为\n",
     "$\\sigma\\left(X\\right)=\\left\\{ X^{-1}\\left(B\\right):B\\in\\mathcal{R}\\right\\}$ 。\n",
     "\n",
     "如果$\\left\\{ X\\left(\\omega\\right):\\omega\\in\\Omega\\right\\}$是有限的或者可数的，\n",
     "我们将这样的可测函数称为**离散性随机变量**。如果集合$\\left\\{ X\\left(\\omega\\right):\\omega\\in\\Omega\\right\\}$\n",
     "是不可数的，我们称之为**连续型随机变量** 。\n",
     "\n",
-    "可测函数的定义中还没有涉及到任何概率相关的概念。但如果一个概率测度\n",
-    "$P$ 位于 $(\\Omega,\\mathcal{F})$ 中，可测函数 $X$ 可以在\n",
+    "可测函数的定义中还没有涉及到任何概率相关的概念。\n",
+    "但如果 $(\\Omega,\\mathcal{F})$ 上有一个概率测度 $P$，\n",
+    "可测函数 $X$ 可以在\n",
     "$(\\mathbb{R},\\mathcal{R})$ 上导出一个概率测度。不难证明，如果满足定义\n",
     "\n",
     "$$\n",
@@ -149,9 +147,10 @@
     "$$\n",
     "\n",
     "那么$P_{X}:(\\mathbb{R},\\mathcal{R})\\mapsto\\left[0,1\\right]$\n",
-    "也是一个概率测度。 $B\\in\\mathcal{R}$的条件下，这样的 $P_{X}$ 被称为由\n",
+    "也是一个概率测度。 \n",
+    "这样的 $P_{X}$ 被称为由\n",
     "$X$ **诱导**的概率测度。诱导概率测度 $P_{X}$ 是\n",
-    " $P$ 通过由 $X$ 所衍生导出的。\n",
+    " $P$ 通过由 $X$ 所衍生出来的。\n",
     "\n",
     "### 分布函数\n",
     "\n",
@@ -187,7 +186,7 @@
     "(ii) $\\int_{a}^{b}f\\left(x\\right)dx=F\\left(b\\right)-F\\left(a\\right)$ 。\n",
     "\n",
     "```{prf:example}\n",
-    "我们已经学过了许多的参数分布，比如二元分布、泊松分布、均匀分布、指数分布和正态分布, $\\chi^{2}$, $t$, $F$分布等等。这些都是参数分布，意味着较少的参数就能够完全表征出他们的CDF和PDF。\n",
+    "我们已经学过了许多的参数分布，比如二元分布、泊松分布、均匀分布、指数分布和正态分布, $\\chi^{2}$, $t$, $F$分布等等。这些都是参数分布，意味着较少的参数就能够完全表征出他们的累积分布函数和概率密度函数。\n",
     "```"
    ]
   },
@@ -200,10 +199,21 @@
     "\n",
     "### 积分\n",
     "\n",
-    "积分是数学分析中最基础的数学方法之一。我们已经在本科阶段学习过直观的黎曼积分。但是勒贝格积分才是更加泛用的积分定义。本讲简要介绍更加通用的勒贝格积分。$X$ 被认为是一个在测度空间 $\\left(\\Omega,\\mathcal{F}\\right)$ \n",
-    "中的**简单函数**。如果 $X=\\sum_{i}a_{i}\\cdot1\\left\\{ A_{i}\\right\\}$\n",
-    "而且它的加总是有限的。同时其中 $a_{i}\\in\\mathbb{R}$ 和 $\\{A_{i}\\in\\mathcal{F}\\}_{i\\in\\mathbb{N}}$ 是\n",
-    "$\\Omega$的一部分。我们就可以认为一个简单函数是可测的。\n",
+    "积分是数学分析中最基础的数学方法之一。我们已经在本科阶段学习过直观的黎曼积分。本讲简要介绍更加通用的**勒贝格积分**。\n",
+    "\n",
+    "给定 $a_{i}\\in\\mathbb{R}$ 和 $\\{A_{i}\\in\\mathcal{F}\\}_{i\\in\\mathbb{N}}$，\n",
+    "如果 $X=\\sum_{i}a_{i}\\cdot1\\left\\{ A_{i}\\right\\}$\n",
+    "而且它的加总是有限的，我们称 $X$ 为在测度空间 $\\left(\\Omega,\\mathcal{F}\\right)$ \n",
+    "上的**简单函数**。简单函数是可测的。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfffeec4",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
     "\n",
     "1.  令 $\\left(\\Omega,\\mathcal{F},\\mu\\right)$ 为一个测度空间。 简单函数\n",
     "    $X$ 相对于 $\\mu$ 的积分定义为\n",
@@ -215,7 +225,7 @@
     "    不同于黎曼积分，\n",
     "    这种积分的定义不需要等额地分割定义域。相反，它依据函数的值域作相应的计算。\n",
     "\n",
-    "2.  令 $X$ 作为一个非负的函数。函数 $X$ 对于 $\\mu$ 的积分为：\n",
+    "2.  令 $X$ 为非负函数。函数 $X$ 对于 $\\mu$ 的积分为：\n",
     "\n",
     "    $$\n",
     "    \\int X\\mathrm{d}\\mu=\\sup\\left\\{ \\int Y\\mathrm{d}\\mu:0\\leq Y\\leq X,\\text{ }Y\\text{ is simple}\\right\\} .\n",
@@ -233,8 +243,7 @@
     "\n",
     "```{prf:remark}\n",
     "-   \n",
-    "    勒贝格积分和黎曼积分之间在被积函数上的核心区别体现在单位区间 $1\\left\\{ x\\in\\mathbb{Q}\\cap[0,1]\\right\\}$ 上的狄利克雷函数（Dirichelet function）。它是黎曼不可积分的，但是可以使用勒贝格积分计算。\n",
-    "    它有明确的定义且满足\n",
+    "    勒贝格积分和黎曼积分之间在被积函数上的核心区别体现在单位区间 $1\\left\\{ x\\in\\mathbb{Q}\\cap[0,1]\\right\\}$ 上的狄利克雷函数（Dirichelet function）。在黎曼意义下该函数不可积，但在勒贝格意义下可积，即\n",
     "    $\\int1\\left\\{ x\\in\\mathbb{Q}\\cap[0,1]\\right\\} dx=0$.\n",
     "```\n",
     "\n",
@@ -242,12 +251,12 @@
     "就称为 $X$ 的**数学期望**。我们通常会使用符号 $E\\left[X\\right]$来代替\n",
     " $\\int X\\mathrm{d}P$ ，使得整个数学表达式更简洁方便。\n",
     "\n",
-    "尽管我们不能预测在给定情况下一个随机变量的实际值(否则一切对于不确定性的研究\n",
-    "都是徒劳了)，但是期望能够告诉我们随机变量的均值。在频率论者的视角里，期望等于我们进行了大样本的实验后得出结果的均值。\n",
+    "尽管我们不能预测在给定情况下一个随机变量的实际值(否则一切对于不确定性的研究都是徒劳)，但是期望能够告诉我们随机变量的均值。在频率学派的视角里，期望等于我们进行了大量实验后得出结果的均值。\n",
     "\n",
-    "如果我们知道了一个离散型随机变量的概率质量函数(probability mass function),它的期望就是 $E\\left[X\\right]=\\sum_{x}xP\\left(X=x\\right)$ ，也就是一个简单函数的积分。如果一个连续型随机变量存在概率密度函数 $f(x)$ , 它的期望可以用\n",
-    " $E\\left[X\\right]=\\int xf\\left(x\\right)\\mathrm{d}x$ 计算。这两个表达式被勒贝格\n",
-    "积分统一为 $E[X]=\\int X\\mathrm{d}P$。"
+    "如果我们知道了一个离散型随机变量的概率质量函数(probability mass function),它的期望就是 $E\\left[X\\right]=\\sum_{x}xP\\left(X=x\\right)$ ，也就是一个简单函数的积分。\n",
+    "如果一个连续型随机变量概率密度函数为 $f(x)$ , 它的期望可以用\n",
+    "$E\\left[X\\right]=\\int xf\\left(x\\right)\\mathrm{d}x$ 计算。\n",
+    "这两个表达式被勒贝格积分统一为 $E[X]=\\int X\\mathrm{d}P$。"
    ]
   },
   {
@@ -273,10 +282,11 @@
     "-   $E[\\cdot]$ 是线性算子。如果 $\\phi(\\cdot)$ 是一个线性函数,\n",
     "    那么有 $E[\\phi(X)]=\\phi(E[X])$ 。\n",
     "\n",
-    "-   **詹森不等式**是一个重要的结论。\n",
+    "-   **Jensen不等式**是一个重要的结论。\n",
     "    如果定义域内的所有$x_{1},x_{2}$和$a\\in[0,1]$ 都有\n",
-    "    $\\varphi(ax_{1}+(1-a)x_{2})\\leq a\\varphi(x_{1})+(1-a)\\varphi(x_{2})$ ，函数 $\\varphi(\\cdot)$ 是凸函数\n",
-    "    例如， $x^{2}$ 是一个凸函数。詹森不等式说明如果\n",
+    "    $\\varphi(ax_{1}+(1-a)x_{2})\\leq a\\varphi(x_{1})+(1-a)\\varphi(x_{2})$ ，则函数 $\\varphi(\\cdot)$ 是凸函数。\n",
+    "    例如， $x^{2}$ 是一个凸函数。\n",
+    "    Jensen不等式说的是，如果\n",
     "    $\\varphi\\left(\\cdot\\right)$ 是一个凸函数，那么\n",
     "    $\\varphi\\left(E\\left[X\\right]\\right)\\leq E\\left[\\varphi\\left(X\\right)\\right]。$\n",
     "\n",
@@ -285,30 +295,48 @@
     "    $P\\left(\\left|X\\right|>\\epsilon\\right)\\leq E\\left[\\left|X\\right|^{r}\\right]/\\epsilon^{r}$。\n",
     "    **Chebyshev不等式**\n",
     "    $P\\left(\\left|X\\right|>\\epsilon\\right)\\leq E\\left[X^{2}\\right]/\\epsilon^{2}$\n",
-    "    是Markov不等式在 $r=2$的时候的一个特例。\n",
+    "    是Markov不等式在 $r=2$ 时的特例。\n",
     "\n",
-    "-   一个随机变量的分布可以被它的CDF或PDF完整刻画。而矩条件同样也是分布的一个函数。为了从矩中找出对应的分布，我们可以使用矩母函数（mgf） $M_{X}(t)=E[e^{tX}]$（$t\\in\\mathbb{R}$）。基于mgf进行计算可以计算 $r$ 阶矩\n",
+    "-   一个随机变量的分布可以被它的CDF或PDF完整刻画，也可以用矩完整刻画。为了从矩中找出对应的分布，我们可以使用矩母函数（mgf） $M_{X}(t)=E[e^{tX}]$（$t\\in\\mathbb{R}$）。基于mgf可以得到 $r$ 阶矩\n",
     "\n",
     "    $$\n",
     "    E[X^{r}]=\\frac{\\mathrm{d}^{r}M_{X}(t)}{\\mathrm{d}t^{r}}\\big\\vert_{t=0}.\n",
     "    $$\n",
     "    \n",
-    "    值得注意的是，就像矩一样，有些分布的mgf不存在。\n",
+    "    值得注意的是，就像矩一样，有些分布的mgf不存在。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a6898ec",
+   "metadata": {},
+   "source": [
     "\n",
     "## 多元随机变量\n",
     "\n",
     "二元随机变量是\n",
     "$X:\\Omega\\mapsto\\mathbb{R}^{2}$ 上的映射。我们可以由此推广到多元的随机变量。\n",
     "$X:\\Omega\\mapsto\\mathbb{R}^{n}$ 。 我们可以定义**联合CDF**为\n",
-    "$F\\left(x_{1},\\ldots,x_{n}\\right)=P\\left(X_{1}\\leq x_{1},\\ldots,X_{n}\\leq x_{n}\\right)$ 。\n",
+    "\n",
+    "$$\n",
+    "F\\left(x_{1},\\ldots,x_{n}\\right)=P\\left(X_{1}\\leq x_{1},\\ldots,X_{n}\\leq x_{n}\\right).\n",
+    "$$\n",
+    "\n",
     "联合PDF的定义与之类似。\n",
     "\n",
-    "我们有必要了解一下二元变量的联合分布、条件分布和边际分布，然后我们就可以将二元的情况推广到多元分布。假设二元随机变量\n",
+    "我们复习二元变量的联合分布、条件分布和边际分布。二元的情况可以推广到多元分布。假设二元随机变量\n",
     "$(X,Y)$ 有一个联合密度函数 $f(\\cdot,\\cdot)$。如果我们暂时忽略\n",
     "$f(x)=0$ 的特殊情况，那么我们可以将它的**条件密度**简略地写成\n",
     "$f\\left(y|x\\right)=f\\left(x,y\\right)/f\\left(x\\right)$\n",
     "。二元变量的**边际密度** $f\\left(y\\right)=\\int f\\left(x,y\\right)dx$\n",
-    "则是把我们不感兴趣的那一个变量通过积分使它不再成为函数中的一个变量。\n",
+    "则是把我们不感兴趣的那个变量通过积分将它卷走。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93fd9fab",
+   "metadata": {},
+   "source": [
     "\n",
     "### 条件概率和贝叶斯公式\n",
     "\n",
@@ -323,7 +351,7 @@
     "在条件概率的定义中, $A_{2}$\n",
     "扮演了结果空间的角色，所以 $P(A_{1}A_{2})$ 被 $P(A_{2})$的值标准化了。\n",
     "如果 $P(A_{2})=0$，\n",
-    "在部分的案例中，条件概率公式依然使用，但是在这种情况下，我们需要介绍两个测度之间的**支配与被支配关系** (dominating and dominated)，我们在此不打算细谈。\n",
+    "有些情况下条件概率公式依然可用，但是在这种情况下，我们需要介绍两个测度之间的**支配与被支配关系** (dominating and dominated)，我们在此不展开。\n",
     "\n",
     "既然 $A_{1}$ 和 $A_{2}$ 是对称的,我们还能得出\n",
     "$P(A_{1}A_{2})=P(A_{2}|A_{1})P(A_{1})$ ,它表明了\n",
@@ -332,7 +360,15 @@
     "P(A_{1}|A_{2})=\\frac{P\\left(A_{2}|A_{1}\\right)P\\left(A_{1}\\right)}{P\\left(A_{2}\\right)}\n",
     "$$\n",
     "\n",
-    "这个公式就是贝叶斯定理 **Bayes' Theorem**\n",
+    "这个公式就是著名的**贝叶斯定理**。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e36c3056",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "### 独立性\n",
     "\n",
@@ -341,34 +377,52 @@
     " $P(A_{1}|A_{2})=P(A_{1})$ 。换言之，如果 $A_{1}$ 和 $A_{2}$ 独立，已知 $A_{2}$ 的信息，将不会改变\n",
     "$A_{1}$ 的概率。\n",
     "\n",
-    "如果两个随机变量 $X$ 和 $Y$ 独立， 那么对于任意两个波莱尔集 $B_{1}$ and $B_{2}$，会有\n",
-    "$P\\left(X\\in B_{1},Y\\in B_{2}\\right)=P\\left(X\\in B_{1}\\right)P\\left(Y\\in B_{2}\\right)$\n",
+    "如果两个随机变量 $X$ 和 $Y$ 独立， 那么对于任意两个波莱尔集 $B_{1}$ and $B_{2}$，\n",
+    "会有$P\\left(X\\in B_{1},Y\\in B_{2}\\right)=P\\left(X\\in B_{1}\\right)P\\left(Y\\in B_{2}\\right)$\n",
     "\n",
-    "若 $X$ 和 $Y$ 独立，则二者的期望有 $E[XY]=E[X]E[Y]$ 。即期望的积等于积的期望。\n",
+    "若 $X$ 和 $Y$ 独立，则二者的期望有 $E[XY]=E[X]E[Y]$ 。即期望的积等于积的期望。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a8d45a0",
+   "metadata": {},
+   "source": [
     "\n",
     "### 期望迭代法则\n",
     "\n",
     "给定 $\\left(\\Omega,\\mathcal{F},P\\right)$ ，**子 $\\sigma$ 域**\n",
-    "$\\mathcal{G}\\subseteq\\mathcal{F}$ 和一个 满足条件 $E\\left|Y\\right|<\\infty$ 的 $\\mathcal{F}$-测度函数\n",
-    " $Y$。**条件期望** $E\\left[Y|\\mathcal{G}\\right]$ 被定义为\n",
-    " $\\mathcal{G}$-可测函数，使得对于所有的 $A\\in\\mathcal{G}$:\n",
+    "$\\mathcal{G}\\subseteq\\mathcal{F}$ 和满足 $E\\left|Y\\right|<\\infty$ 的 $\\mathcal{F}$-可测函数。\n",
+    "在这里 $\\mathcal{G}$ 是一个粗糙的 $\\sigma$ 域， 而 $\\mathcal{F}$\n",
+    "是一个精细的 $\\sigma$ 域。\n",
+    "如果对于所有的 $A\\in\\mathcal{G}$，都有\n",
     "\n",
     "$$\n",
     "\\int_{A}Y\\mathrm{d}P=\\int_{A}E\\left[Y|\\mathcal{G}\\right]\\mathrm{d}P\n",
     "$$\n",
     "\n",
-    "在这里\n",
-    " $\\mathcal{G}$ 是一个粗糙的 $\\sigma$ 域， 而 $\\mathcal{F}$\n",
-    "是一个平滑的 $\\sigma$ 域。\n",
+    "我们称其为**条件期望** $E\\left[Y|\\mathcal{G}\\right]$。它是 $\\mathcal{G}$-可测的，\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ececa7d2",
+   "metadata": {},
+   "source": [
     "\n",
-    "使 $A=\\Omega$，我们能够得到\n",
-    "$E\\left[Y\\right]=\\int Y\\mathrm{d}P=\\int E\\left[Y|\\mathcal{G}\\right]\\mathrm{d}P=E\\left[E\\left[Y|\\mathcal{G}\\right]\\right]$ 。这就是著名的\n",
-    "\n",
-    "**重复期望定律**\n",
+    "令 $A=\\Omega$，我们能够得到\n",
+    "$E\\left[Y\\right]=\\int Y\\mathrm{d}P=\\int E\\left[Y|\\mathcal{G}\\right]\\mathrm{d}P=E\\left[E\\left[Y|\\mathcal{G}\\right]\\right]$ 。这就是著名的**重复期望定律**\n",
     "\n",
     "$$\n",
-    "E\\left[Y\\right]=E\\left[E\\left[Y|\\mathcal{G}\\right]\\right]\n",
-    "$$\n",
+    "E\\left[Y\\right]=E\\left[E\\left[Y|\\mathcal{G}\\right]\\right].\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb935a0d",
+   "metadata": {},
+   "source": [
     "\n",
     "按照条件期望的定义来看，这个公式不难理解。在二元变量的案例中，如果条件密度函数存在，那么条件期望可以\n",
     "这样计算\n",
@@ -391,16 +445,23 @@
     "测度理论在20世纪的早期由一群富有才华的法国和德国学者建立。\n",
     "其中代表人物有Émile Borel, Henri Lebesgue, Johann\n",
     "Radon等等。几代俄罗斯学者如 Andrey Markov 和 Andrey Kolmogorov\n",
-    "为数学化和符号化“不确定性”和“随机性”这些抽象的概念奠定了基础。这些贡献者们的名字被镌刻在在波莱尔集、勒贝格积分、马克洛夫链、柯尔莫哥洛夫零一法则和许多的术语中被牢牢铭记。\n",
+    "为数学化和符号化“不确定性”和“随机性”这些抽象的概念奠定了基础。这些贡献者们的名字被镌刻在在波莱尔集、勒贝格积分、Markov链、Kolmogorov零一法则等术语中。\n",
     "\n",
     "关于概率的各种各样的有趣的问题吸引了一批又一批学者。Francis Edgeworth\n",
     "(1845--1926) 在概率和统计方面写出了许多的著作； John Maynard Keynes\n",
-    "(1883--1946)在1921年发表了 **《概率论》**\n",
+    "(1883--1946)在1921年发表了《概率论》\n",
     "将概率和哲学融合到一起，尽管这本书的流传度不如他后来1936年革命性的著作\n",
-    "**《就业、利息和货币通论》**\n",
+    "《就业、利息和货币通论》。\n",
     "\n",
-    "如今，搜集和处理信息的效率和成本相较于一百年前已经发生了翻天覆地的变化。然而可惜的是，学习和发展数学的投入成本与百年前相差无多。只有一小部分有才华的人才能聆听和体会这些伟大的数学思想。\n",
-    "```\n",
+    "如今，搜集和处理信息的效率和成本相较于一百年前已经发生了翻天覆地的变化。然而，学习和研究数学的投入成本与百年前相差无多。只有一小部分有才华的人才能聆听、体会、继承和发展这些伟大的数学思想。\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67593c06",
+   "metadata": {},
+   "source": [
     "\n",
     "```{admonition} 拓展阅读\n",
     "{cite}`doob1996development`\n",
