Revert "do I have something uncommintted?"
This reverts commit 9413437dc411bbcc22d557fc4eda886c6e5523bd.

--- a/lecture1-CN.ipynb
+++ b/lecture1-CN.ipynb
@@ -130,7 +130,7 @@
     "\n",
     "我们称 $X:\\Omega\\mapsto\\mathbb{R}$ \n",
     "是连接 $\\left(\\Omega,\\mathcal{F}\\right)\\backslash\\left(\\mathbb{R},\\mathcal{R}\\right)$\n",
-    "的**可测函数** (measurable functchoyoougoogoogagaion)。 **随机变量** 是可测函数带有浪漫气息的别名。由 **随机变量 $X$ 生成的 $\\sigma$ 域** 被定义为\n",
+    "的**可测函数** (measurable function)。 **随机变量** 是可测函数带有浪漫气息的别名。由 **随机变量 $X$ 生成的 $\\sigma$ 域** 被定义为\n",
     "$\\sigma\\left(X\\right)=\\left\\{ X^{-1}\\left(B\\right):B\\in\\mathcal{R}\\right\\}$ 。\n",
     "\n",
     "如果$\\left\\{ X\\left(\\omega\\right):\\omega\\in\\Omega\\right\\}$是有限的或者可数的，\n",
@@ -447,7 +447,7 @@
     "Radon等等。几代俄罗斯学者如 Andrey Markov 和 Andrey Kolmogorov\n",
     "为数学化和符号化“不确定性”和“随机性”这些抽象的概念奠定了基础。这些贡献者们的名字被镌刻在在波莱尔集、勒贝格积分、Markov链、Kolmogorov零一法则等术语中。\n",
     "\n",
-    "概率的的问题深刻而有趣，吸引了一批又一批学者。Francis Edgeworth\n",
+    "关于概率的各种各样的有趣的问题吸引了一批又一批学者。Francis Edgeworth\n",
     "(1845--1926) 在概率和统计方面写出了许多的著作； John Maynard Keynes\n",
     "(1883--1946)在1921年发表了《概率论》\n",
     "将概率和哲学融合到一起，尽管这本书的流传度不如他后来1936年革命性的著作\n",
